docs: 2월 28일 계획 체크

--- a/에덴/2월28일-3월6일.md
+++ b/에덴/2월28일-3월6일.md
@@ -1,5 +1,5 @@
 ## 2월 28일
 
-- [ ] 이펙티브 자바 아이템 58, 18, 37 읽기
-- [ ] 객체지향의 사실과 오해 2장 정리
-- [ ] 5개 PR 염탐
+- [x] 이펙티브 자바 아이템 58, 18, 37 읽기
+- [x] 객체지향의 사실과 오해 2장 정리
+- [x] 5개 PR 염탐
