220228 아서 일정완료

--- a/아서/2월28일-3월6일.md
+++ b/아서/2월28일-3월6일.md
@@ -1,6 +1,12 @@
 ## 2월 28일
 
-- [ ] 자바의 신 - 이넘, 제네릭 읽기
-- [ ] 함께자라기 30 페이지 읽기
-- [ ] 2단계 시작하기(커멘트 달린 내용 위주로 수정)
+- [x] 자바의 신 - 이넘, 제네릭 읽기
+- [x] 함께자라기 30 페이지 읽기
+- [x] 2단계 시작하기(커멘트 달린 내용 위주로 수정)
+
+#### 추가로 공부한 사항:
+
+- 자바의 신 읽기(~p100)
+- 일급컬렉션 테스트 포스팅
+- 싱글턴과 정적클래스 조사
 
