docs: 민초 2.28 일정 완료

--- a/민초/2월28일-3월6일.md
+++ b/민초/2월28일-3월6일.md
@@ -1,8 +1,6 @@
 # 2.28.
 
-- [ ] 로또 step1 추가 피드백 있을시 수정 후 리뷰 요청
-- [ ] OS 스터디 3-2 챕터 발표 준비
-- [ ] JS 딥다이브 41, 42, 45장 읽기
-
-
+- [x] 로또 step1 추가 피드백 있을시 수정 후 리뷰 요청
+- [x] OS 스터디 3-2 챕터 발표 준비
+- [x] JS 딥다이브 41, 42, 45장 읽기
 
