--- a/앨버/2월28일-3월6일.md
+++ b/앨버/2월28일-3월6일.md
@@ -1,7 +1,7 @@
 ## 2월 28일
 
-- 로또 미션 리팩토링
-- 로또 미션 2단계 시작
-- 객체 사실과 오해 챕터 읽기 (챕터 1개 분량)
-- 알고리즘 1문제 풀기
-- 함께 자라기 읽기 (2/3 지점까지)
+- [x] 로또 미션 리팩토링
+- [x] 로또 미션 2단계 시작
+- [x] 객체 사실과 오해 챕터 읽기 (챕터 1개 분량)
+- [x] 알고리즘 1문제 풀기
+- [x] 함께 자라기 읽기 (2/3 지점까지)
