--- a/티거/2월28일-3월6일.md
+++ b/티거/2월28일-3월6일.md
@@ -1,10 +1,10 @@
 # 🐯 2월 28일 ~ 3월 6일
 
-## 2월 28일
+## 2월 28일 (월)
 
-- [ ] 로또 1단계 리뷰 피드백
-- [ ] 로또 2단계 시작
-  - [ ] 구현할 기능 목록 정리
-  - [ ] 설계
-- [ ] 15시 손목 치료
-- [ ] 독서 < 함께 자라기 >
+- [x] 로또 1단계 리뷰 피드백
+- [x] 로또 2단계 시작
+  - [x] 구현할 기능 목록 정리
+  - [x] 설계
+- [x] 15시 손목 치료
+- [x] 독서 < 함께 자라기 > ~105p
