--- a/코린/2월28일-3월6일.md
+++ b/코린/2월28일-3월6일.md
@@ -2,3 +2,9 @@
 
 - [x] 로또 2단계(수동) 구현해서 PR 보내기
 - [x] <함께자라기> p.105까지 읽기
+
+## 3월2일
+
+- [x] 로또 2단계(수동) 피드백 반영해서 다시 리뷰 요청
+- [x] git merge, rebase 비교 자료 찾고 공부
+- [x] 산책 30분
