--- a/오리/2월28일-3월6일.md
+++ b/오리/2월28일-3월6일.md
@@ -1,5 +1,5 @@
 ### 2월 28일 (월)
-- [ ] 모던 자바 인 액션 3장
-- [ ] 로또 2단계 코맨트 달기
-- [ ] 함께자라기 ~107
-- [ ] git merge rebase 관련 자료 정리
+- [x] 모던 자바 인 액션 3장
+- [x] 로또 2단계 코맨트 달기
+- [x] 함께자라기 ~107
+- [x] git merge rebase 관련 자료 정리
