[민초] 3월 2일 계획

--- a/민초/2월28일-3월6일.md
+++ b/민초/2월28일-3월6일.md
@@ -4,3 +4,10 @@
 - [x] OS 스터디 3-2 챕터 발표 준비
 - [x] JS 딥다이브 41, 42, 45장 읽기
 
+
+
+# 3.2.
+
+- [ ] 로또 step2 구조 설계
+- [ ] OS 스터디 3-4 발표 준비
+- [ ] 생활코딩 웹팩 8~11강
