--- a/아서/2월28일-3월6일.md
+++ b/아서/2월28일-3월6일.md
@@ -10,3 +10,13 @@
 - 일급컬렉션 테스트 포스팅
 - 싱글턴과 정적클래스 조사
 
+
+
+---
+
+## 3월 2일
+
+- [ ] 백기선 싱글턴 강의 듣기
+- [ ] 싱글턴 포스팅하기
+- [ ] 객체 지향의 사실과 오해 챕터1 읽기
+- [ ] 저녁 약속
