--- a/오리/2월28일-3월6일.md
+++ b/오리/2월28일-3월6일.md
@@ -3,3 +3,8 @@
 - [x] 로또 2단계 코맨트 달기
 - [x] 함께자라기 ~107
 - [x] git merge rebase 관련 자료 정리
+
+### 3월 2일 (수)
+- [ ] 모던 자바 인 액션 4장, 5장(도입)
+- [ ] pro git ~90p
+- [ ] 저녁 약속
