[티거] 3월 2일 추가

--- a/티거/2월28일-3월6일.md
+++ b/티거/2월28일-3월6일.md
@@ -8,3 +8,9 @@
   - [x] 설계
 - [x] 15시 손목 치료
 - [x] 독서 < 함께 자라기 > ~105p
+
+## 3월 2일 (수)
+
+- [ ] 9시 독서 스터디
+- [ ] 10시 30분 로또 1단계 피드백 강의
+- [ ] 로또 2단계 기능 구현
