--- a/민초/2월28일-3월6일.md
+++ b/민초/2월28일-3월6일.md
@@ -8,6 +8,7 @@
 
 # 3.2.
 
-- [ ] 로또 step2 구조 설계
-- [ ] OS 스터디 3-4 발표 준비
-- [ ] 생활코딩 웹팩 8~11강
+- [x] 로또 step2 구조 설계
+- [x] OS 스터디 3-4 발표 준비
+- [x] 생활코딩 웹팩 8~11강
+
