--- a/앨버/2월28일-3월6일.md
+++ b/앨버/2월28일-3월6일.md
@@ -5,3 +5,11 @@
 - [x] 객체 사실과 오해 챕터 읽기 (챕터 1개 분량)
 - [x] 알고리즘 1문제 풀기
 - [x] 함께 자라기 읽기 (2/3 지점까지)
+
+
+## 3월 2일
+
+- [ ] 로또 미션 2단계 진행 (최대한 마무리하는 걸로..)
+- [ ] 알고리즘 1문제 풀기
+- [ ] 스터디 참여
+- [ ] flux 패턴 공부
