--- a/앨버/2월28일-3월6일.md
+++ b/앨버/2월28일-3월6일.md
@@ -9,7 +9,7 @@
 
 ## 3월 2일
 
-- [ ] 로또 미션 2단계 진행 (최대한 마무리하는 걸로..)
-- [ ] 알고리즘 1문제 풀기
-- [ ] 스터디 참여
-- [ ] flux 패턴 공부
+- [x] 로또 미션 2단계 진행 (최대한 마무리하는 걸로..)
+- [x] 알고리즘 1문제 풀기
+- [x] 스터디 참여
+- [x] flux 패턴 공부
