--- a/티거/2월28일-3월6일.md
+++ b/티거/2월28일-3월6일.md
@@ -11,6 +11,6 @@
 
 ## 3월 2일 (수)
 
-- [ ] 9시 독서 스터디
-- [ ] 10시 30분 로또 1단계 피드백 강의
-- [ ] 로또 2단계 기능 구현
+- [x] 9시 독서 스터디
+- [x] 10시 30분 로또 1단계 피드백 강의
+- [x] 로또 2단계 기능 구현
