--- a/잉/2월28일-3월6일.md
+++ b/잉/2월28일-3월6일.md
@@ -4,6 +4,11 @@
 - [X] 운동 1시간하고 오기
 
 ### 3월 02일 (수)
-- [X ]로또 2단계 PR 하기. 
-- [X]객체지향의 사실과 오해 ~38. 
-- [X]운동 1시간.  
+- [X] 로또 2단계 PR 하기  
+- [X] 객체지향의 사실과 오해 ~38  
+- [X] 운동 1시간    
+
+### 3월 03일 (목)
+- [X] 로또 2단계 리펙토링
+- [X] 객체지향의 사실과 오해 ~71
+- [X] 운동 1시간    
