--- a/민초/2월28일-3월6일.md
+++ b/민초/2월28일-3월6일.md
@@ -16,6 +16,6 @@
 
 # 3.3
 
-- [ ] 학습로그 작성
-- [ ] 로또 step2 구현 (~금요일)
-- [ ] OS 스터디 3-5 발표 준비
+- [x] 학습로그 작성
+- [x] 로또 step2 구현 (~금요일)
+- [x] OS 스터디 3-5 발표 준비
