[아서] 3월 3일 일정끝

--- a/아서/2월28일-3월6일.md
+++ b/아서/2월28일-3월6일.md
@@ -27,6 +27,6 @@
 
 ## 3월 3일
 
-- [ ] 2단계 피드백 반영 및 PR
-- [ ] JVM 클래스 로딩, 초기화 공부
-- [ ] 저녁 회식
+- [x] 2단계 피드백 반영 및 PR
+- [x] JVM 클래스 로딩, 초기화 공부
+- [x] 저녁 회식
