[아서] 3월 3일 계획 (#18)
* 220302 아서 일정

* [아서] 3월 3일 계획

* [아서] 3월 3일 일정끝

--- a/아서/2월28일-3월6일.md
+++ b/아서/2월28일-3월6일.md
@@ -16,7 +16,17 @@
 
 ## 3월 2일
 
-- [ ] 백기선 싱글턴 강의 듣기
-- [ ] 싱글턴 포스팅하기
-- [ ] 객체 지향의 사실과 오해 챕터1 읽기
-- [ ] 저녁 약속
+- [x] 백기선 싱글턴 강의 듣기
+- [x] 싱글턴 포스팅하기
+- [x] 객체 지향의 사실과 오해 챕터1 읽기
+- [x] 저녁 약속
+
+
+
+---
+
+## 3월 3일
+
+- [x] 2단계 피드백 반영 및 PR
+- [x] JVM 클래스 로딩, 초기화 공부
+- [x] 저녁 회식
