--- a/코린/2월28일-3월6일.md
+++ b/코린/2월28일-3월6일.md
@@ -10,5 +10,6 @@
 - [x] 산책 30분
 
 ## 3월3일
-- [ ] 테코톡 발표 내용 정리 및 자료 만들기
-- [ ] 로또 2단계(수동) 피드백 반영하기
+
+- [x] 테코톡 발표 내용 정리 및 자료 만들기
+- [x] 로또 2단계(수동) 피드백 반영하기
