[코린] 3월3일 계획 (#20)
* feat: 코린 3월2일 일정 완료

* feat: 코린 3월3일 일정 추가

* feat: 코린 3월3일 일정 추가

* feat: 코린 3월3일 일정 완료

--- a/코린/2월28일-3월6일.md
+++ b/코린/2월28일-3월6일.md
@@ -8,3 +8,8 @@
 - [x] 로또 2단계(수동) 피드백 반영해서 다시 리뷰 요청
 - [x] git merge, rebase 비교 자료 찾고 공부
 - [x] 산책 30분
+
+## 3월3일
+
+- [x] 테코톡 발표 내용 정리 및 자료 만들기
+- [x] 로또 2단계(수동) 피드백 반영하기
