[티거] 3월 3일 완료

--- a/티거/2월28일-3월6일.md
+++ b/티거/2월28일-3월6일.md
@@ -17,7 +17,7 @@
 
 ## 3월 3일 (목)
 
-- [ ] 로또 2단계
-  - [ ] 수정 + 리팩토링
-  - [ ] CSS 입히기
-- [ ] 학습로그 초안 작성
+- [x] 로또 2단계
+  - [x] 수정 + 리팩토링
+  - [x] CSS 입히기
+- [x] 학습로그 초안 작성
