--- a/티거/2월28일-3월6일.md
+++ b/티거/2월28일-3월6일.md
@@ -14,3 +14,10 @@
 - [x] 9시 독서 스터디
 - [x] 10시 30분 로또 1단계 피드백 강의
 - [x] 로또 2단계 기능 구현
+
+## 3월 3일 (목)
+
+- [x] 로또 2단계
+  - [x] 수정 + 리팩토링
+  - [x] CSS 입히기
+- [x] 학습로그 초안 작성
