[오리] 3월 3일 계획 완료

--- a/오리/2월28일-3월6일.md
+++ b/오리/2월28일-3월6일.md
@@ -10,6 +10,6 @@
 - [x] 저녁 약속
 
 ### 3월 3일 (목)
-- [ ] 모던 자바 인 액션 5장
-- [ ] git docs merge, rebase
-- [ ] 테코톡 회의
+- [x] 모던 자바 인 액션 5장
+- [x] git docs merge, rebase
+- [x] 테코톡 회의
