[오리] 3월3일 계획 (#21)
* [오리] 3월 3일(목) 계획

* [오리] 3월 3일 계획 완료

--- a/오리/2월28일-3월6일.md
+++ b/오리/2월28일-3월6일.md
@@ -5,6 +5,11 @@
 - [x] git merge rebase 관련 자료 정리
 
 ### 3월 2일 (수)
-- [ ] 모던 자바 인 액션 4장, 5장(도입)
-- [ ] pro git ~90p
-- [ ] 저녁 약속
+- [x] 모던 자바 인 액션 4장, 5장(도입)
+- [x] pro git ~90p
+- [x] 저녁 약속
+
+### 3월 3일 (목)
+- [x] 모던 자바 인 액션 5장
+- [x] git docs merge, rebase
+- [x] 테코톡 회의
