[티거] 3월 4일 추가

--- a/티거/2월28일-3월6일.md
+++ b/티거/2월28일-3월6일.md
@@ -21,3 +21,10 @@
   - [x] 수정 + 리팩토링
   - [x] CSS 입히기
 - [x] 학습로그 초안 작성
+
+## 3월 4일 (금)
+
+- [ ] 학습로그 작성 및 업로드
+- [ ] 로또 2단계
+  - [ ] 수정 + 리팩토링
+- [ ] 보이라 회식
