[오리] 3월 4일 계획

--- a/오리/2월28일-3월6일.md
+++ b/오리/2월28일-3월6일.md
@@ -13,3 +13,11 @@
 - [x] 모던 자바 인 액션 5장
 - [x] git docs merge, rebase
 - [x] 테코톡 회의
+
+### 3월 3일 (금)
+- [ ] 오전 자동차 피드백
+- [ ] 포수타
+- [ ] 저녁 회식
+- [ ] git merge 발표글 정리
+- [ ] git rebase 공부
+- [ ] 모던 자바 인 액션 5장
