--- a/잉/2월28일-3월6일.md
+++ b/잉/2월28일-3월6일.md
@@ -12,3 +12,8 @@
 - [X] 로또 2단계 리펙토링
 - [X] 객체지향의 사실과 오해 ~71
 - [X] 운동 1시간    
+
+### 3월 04일 (금)
+- [ ] 로또 2단계 PR
+- [ ] 보이라 저녁 약속  
+- [ ] 객체지향의 사실과 오해 ~105
