--- a/민초/2월28일-3월6일.md
+++ b/민초/2월28일-3월6일.md
@@ -19,3 +19,10 @@
 - [x] 학습로그 작성
 - [x] 로또 step2 구현 (~금요일)
 - [x] OS 스터디 3-5 발표 준비
+
+
+
+# 3.4
+
+- [ ] 로또 step2 구조 변경 & 구현
+- [ ] OS 스터디 4-1 발표 준비
