[티거] 3월 4일 완료

--- a/티거/2월28일-3월6일.md
+++ b/티거/2월28일-3월6일.md
@@ -24,7 +24,7 @@
 
 ## 3월 4일 (금)
 
-- [ ] 학습로그 작성 및 업로드
-- [ ] 로또 2단계
-  - [ ] 수정 + 리팩토링
-- [ ] 보이라 회식
+- [x] 학습로그 작성 및 업로드
+- [x] 로또 2단계
+  - [x] 수정 + 리팩토링
+- [x] 보이라 회식
