--- a/오리/2월28일-3월6일.md
+++ b/오리/2월28일-3월6일.md
@@ -15,9 +15,9 @@
 - [x] 테코톡 회의
 
 ### 3월 3일 (금)
-- [ ] 오전 자동차 피드백
-- [ ] 포수타
-- [ ] 저녁 회식
-- [ ] git merge 발표글 정리
-- [ ] git rebase 공부
-- [ ] 모던 자바 인 액션 5장
+- [x] 오전 자동차 피드백
+- [x] 포수타
+- [x] 저녁 회식
+- [x] git merge 발표글 정리
+- [x] git rebase 공부
+- [x] 모던 자바 인 액션 5장
