--- a/잉/2월28일-3월6일.md
+++ b/잉/2월28일-3월6일.md
@@ -17,3 +17,8 @@
 - [X] 로또 2단계 PR
 - [X] 보이라 저녁 약속  
 - [X] 객체지향의 사실과 오해 ~105
+
+### 3월 07일 (월)
+- [ ] 이펙티브 자바 아이템1, 3, 4.
+- [ ] 객체지향의 사실과 오해 ~228
+- [ ] 운동 1시간.  
