3월 7일 에덴 계획

--- a/아서/2월28일-3월6일.md
+++ b/아서/2월28일-3월6일.md
@@ -30,3 +30,13 @@
 - [x] 2단계 피드백 반영 및 PR
 - [x] JVM 클래스 로딩, 초기화 공부
 - [x] 저녁 회식
+
+
+
+---
+
+## 3월 4일
+
+- [x] 소스트리 설치하기
+- [x] 정적 클래스 공부하기
+- [x] 저녁 회식
