--- a/코린/2월28일-3월6일.md
+++ b/코린/2월28일-3월6일.md
@@ -13,3 +13,11 @@
 
 - [x] 테코톡 발표 내용 정리 및 자료 만들기
 - [x] 로또 2단계(수동) 피드백 반영하기
+
+## 3월4일
+
+- [x] 학습로그 작성하기
+- [x] 로또 피드백 강의 듣기
+- [x] 로또 2단계(수동) 다시 리뷰 요청
+- [x] git rebase 다룰 내용 틀 잡기
+- [x] 저녁 약속
