[민초] 3월 7일 계획 완료

--- a/민초/3월7일-3월13일.md
+++ b/민초/3월7일-3월13일.md
@@ -1,8 +1,5 @@
 # 3.7.
 
-- [ ] 로또 step2 피드백 오면 반영
-- [ ] OS 스터디 4-2 발표 준비
-- [ ] 풀업 100개
-
-
-
+- [x] 로또 step2 피드백 오면 반영
+- [x] OS 스터디 4-2 발표 준비
+- [x] 풀업 100개
