[아서] 3월7일 일정완료

--- a/아서/3월7일~3월13일.md
+++ b/아서/3월7일~3월13일.md
@@ -1,8 +1,8 @@
 ## 3월 7일
 
-- [ ] 2단계 피드백 반영하기
-- [ ] 모던 자바인액션 2장 정리하기
-- [ ] 싱글턴과 정적클래스 테코톡 자료준비하기
-- [ ] 산책하기
-- [ ] 블랙잭 게임해보기
-- [ ] 데일리 주제 생각하기
+- [x] 2단계 피드백 반영하기
+- [x] 모던 자바인액션 2장 정리하기
+- [x] 싱글턴과 정적클래스 테코톡 자료준비하기
+- [x] 산책하기
+- [x] 블랙잭 게임해보기
+- [x] 데일리 주제 생각하기
