[오리] 3월8월 계획 완료

--- a/오리/3월7일~3월13일.md
+++ b/오리/3월7일~3월13일.md
@@ -1,4 +1,4 @@
 ### 3월 7일 (월)
-- [ ] 테코톡 merge ppt, 대본 완성
-- [ ] 테코톡 cherry-pick 자료 정리
-- [ ] 데일리미팅 저녁회식
+- [x] 테코톡 merge ppt, 대본 완성
+- [x] 테코톡 cherry-pick 자료 정리
+- [x] 데일리미팅 저녁회식
