[파랑] 3월8일 계획

--- a/파랑/3월7일-3월13일.md
+++ b/파랑/3월7일-3월13일.md
@@ -1,5 +1,11 @@
 ### 3월 7일 (월)
-- [ ] 10시 필라테스
-- [ ] 로또 2단계 리뷰 반영
-- [ ] 5시 페어와 로또 2단계 코드 공유
-- [ ] 6시 데일리조 회식
+- [x] 10시 필라테스
+- [x] 로또 2단계 리뷰 반영
+- [x] 5시 페어와 로또 2단계 코드 공유
+- [x] 6시 데일리조 회식
+
+### 3월 8일 (화)
+- [ ] 블랙잭 미션 페어 프로그래밍
+- [ ] 6시 30분 필라테스
+- [ ] 로또 미션에서 배운 내용 정리
+- [ ] `이펙티브 자바`, `자바 기본서` 책 사기
