--- a/민초/3월7일-3월13일.md
+++ b/민초/3월7일-3월13일.md
@@ -3,3 +3,14 @@
 - [x] 로또 step2 피드백 오면 반영
 - [x] OS 스터디 4-2 발표 준비
 - [x] 풀업 100개
+
+
+
+# 3.8.
+
+- [ ] 유튜브 step1 미션
+- [ ] 풀업 100개
+- [ ] 딥스 100개
+- [ ] OS 스터디 4-3 발표 준비
+- [ ] 이마트 가기
+
