[민초] 3월 8일 계획완료 (#49)
* [민초] 3월 8일 계획

* [민초] 3월 8일 계획 완료

--- a/민초/3월7일-3월13일.md
+++ b/민초/3월7일-3월13일.md
@@ -3,3 +3,14 @@
 - [x] 로또 step2 피드백 오면 반영
 - [x] OS 스터디 4-2 발표 준비
 - [x] 풀업 100개
+
+
+
+# 3.8.
+
+- [x] 유튜브 step1 미션
+- [x] 풀업 100개
+- [x] 딥스 100개
+- [x] OS 스터디 4-3 발표 준비
+- [x] 이마트 가기
+
