[아서] 3월 8일 일정완료

--- a/아서/3월7일~3월13일.md
+++ b/아서/3월7일~3월13일.md
@@ -11,7 +11,7 @@
 
 ## 3월 8일
 
-- [ ] 데일리 진행하기
-- [ ] 블랙잭 미션 진행하기 - 페어와 가벼운 대화하기
-- [ ] 객체지향의 사실과 오해 3장 읽기
+- [x] 데일리 진행하기
+- [x] 블랙잭 미션 진행하기 - 페어와 가벼운 대화하기
+- [x] 객체지향의 사실과 오해 3장 읽기
 
