[아서] 3월 8일 계획 (#48)
* [아서] 3월 8일 계획

* [아서] 3월 8일 일정완료

--- a/아서/3월7일~3월13일.md
+++ b/아서/3월7일~3월13일.md
@@ -6,3 +6,12 @@
 - [x] 산책하기
 - [x] 블랙잭 게임해보기
 - [x] 데일리 주제 생각하기
+
+
+
+## 3월 8일
+
+- [x] 데일리 진행하기
+- [x] 블랙잭 미션 진행하기 - 페어와 가벼운 대화하기
+- [x] 객체지향의 사실과 오해 3장 읽기
+
