[잉] 3월8일 계획 (#55)
* 3월 7일 일정 merge

* 220308 잉 일정

* 220308 잉 일정 완료

--- a/잉/2월28일-3월6일.md
+++ b/잉/2월28일-3월6일.md
@@ -21,4 +21,8 @@
 ### 3월 07일 (월)
 - [ ] 이펙티브 자바 아이템1, 3, 4.
 - [X] 객체지향의 사실과 오해 ~228
+- [X] 운동 1시간.  
+
+### 3월 08일 (화)
+- [X] 블랙잭 1단계 패어프로그래밍.
 - [X] 운동 1시간.
