[파랑] 3월8일 계획 완료 (#47)
* [파랑] 3월8일 계획

* [파랑] 3월8일 계획 완료

--- a/파랑/3월7일-3월13일.md
+++ b/파랑/3월7일-3월13일.md
@@ -1,5 +1,16 @@
 ### 3월 7일 (월)
-- [ ] 10시 필라테스
-- [ ] 로또 2단계 리뷰 반영
-- [ ] 5시 페어와 로또 2단계 코드 공유
-- [ ] 6시 데일리조 회식
+- [x] 10시 필라테스
+- [x] 로또 2단계 리뷰 반영
+- [x] 5시 페어와 로또 2단계 코드 공유
+- [x] 6시 데일리조 회식
+
+### 3월 8일 (화)
+- [x] 블랙잭 미션 페어 프로그래밍
+- [x] 6시 30분 필라테스
+- [x] 로또 미션에서 배운 내용 정리
+- [x] `이펙티브 자바`, `자바 기본서` 책 사기
+
+페어 프로그래밍을 온라인으로 할 줄 알고 계획을 짰는데 오프라인으로 하는 바람에 계획이 밀렸다.
+3명 페어가 걸려서 페어들이랑 셋이서 저녁 8시 30분까지 미션 구현하다가 9시에 필라테스 갔다와서 오자마자 남은 일들을 해치웠다.
+이 스터디 안 했으면 그냥 피곤해서 침대로 직행했을 것 같은데 확실히 효과가 좋은 것 같다^^... 
+근데 오늘 kdt 입실 한 줄 알았는데 오류로 입실 안 돼서 3결 처리됐다. 진짜 나는 왤케 맨날 덤벙댈까? 남은 10일간 진짜 출석 잘 챙겨야지ㅠㅠ 내 소중한 지원금... 
