[오리] 3월 8일 계획 완료

--- a/오리/3월7일~3월13일.md
+++ b/오리/3월7일~3월13일.md
@@ -4,6 +4,6 @@
 - [x] 데일리미팅 저녁회식
 
 ### 3월 8일 (화)
-- [ ] 오전 로또 피드백 강의
-- [ ] 블랙잭 페어프로그래밍
-- [ ] 테코톡 대본 정리 및 연습
+- [x] 오전 로또 피드백 강의
+- [x] 블랙잭 페어프로그래밍
+- [x] 테코톡 대본 정리 및 연습
