--- a/민초/3월7일-3월13일.md
+++ b/민초/3월7일-3월13일.md
@@ -16,7 +16,7 @@
 
 # 3. 9
 
-- [ ] 유튜브 step1 미션
-- [ ] 풀업 100개
-- [ ] 딥스 100개
-- [ ] OS 스터디 4-5 준비
+- [x] 유튜브 step1 미션
+- [x] 풀업 100개
+- [x] 딥스 100개
+- [x] OS 스터디 4-5 준비
