--- a/티거/3월7일-3월13일.md
+++ b/티거/3월7일-3월13일.md
@@ -12,7 +12,7 @@
 
 ## 3월 10일 (목)
 
-- [ ] 10시 30분 특강
-- [ ] 유튜브 1단계
-  - [ ] 기능 구현
-  - [ ] 리팩토링
+- [x] 10시 30분 특강
+- [x] 유튜브 1단계
+  - [x] 기능 구현
+  - [x] 리팩토링
