[파랑] 3월10일 계획 완려

--- a/파랑/3월7일-3월13일.md
+++ b/파랑/3월7일-3월13일.md
@@ -16,4 +16,10 @@
 근데 오늘 kdt 입실 한 줄 알았는데 오류로 입실 안 돼서 3결 처리됐다. 진짜 나는 왤케 맨날 덤벙댈까? 남은 10일간 진짜 출석 잘 챙겨야지ㅠㅠ 내 소중한 지원금... 
 
 ### 3월 10일 (목)
-- [ ] 하루종일 블랙잭 미션 페어 프로그래밍
+- [x] 하루종일 블랙잭 미션 페어 프로그래밍
+
+오늘은 우리 집에 페어들이랑 모여서 하루종일 코딩을 했다.
+카페에서 마스크 쓰고 코딱지만한 모니터 보면서 코딩하다가 편하게 집에서 32인치 모니터로 페어 프로그래밍 하니까 완전 편했다.
+점심도 근처 식당에서 맛있는 거 먹고 저녁은 상수 `삭` 떡튀순 + 심술 먹었다. 굳ㅎ
+3명이서 페어 어떻게 하지 걱정 많았는데 더 많은 의견도 들을 수 있고 홀수라서 결정을 아주 민주적으로 내릴 수 있다는 장점(?)이 있었다. 3인 페어 오히려 좋아?
+대충 구현은 다 했는데 아직 리팩토링할 부분이 남아서 아마 내일 마저 하고 제출할 듯 하다.
