[티거] 3월 11일 계획

--- a/티거/3월7일-3월13일.md
+++ b/티거/3월7일-3월13일.md
@@ -16,3 +16,11 @@
 - [x] 유튜브 1단계
   - [x] 기능 구현
   - [x] 리팩토링
+
+## 3월 11일 (금)
+
+- [ ] 10시 30분 강의 < 비동기 돌아보기 with 테스트 >
+- [ ] 14시 포수타
+- [ ] 유튜브 1단계
+  - [ ] 리팩토링
+  - [ ] PR 생성
