[앨버] 3월 10일 계획 (#62)
* 220310 앨버 계획

* 220310 앨버 계획완료

--- a/앨버/3월8일-3월13일.md
+++ b/앨버/3월8일-3월13일.md
@@ -5,7 +5,14 @@
 - [x] 모던 자바스크립트 1장 읽기
 - [x] 30분 운동하기
 
+
 ## 3월 8일
 - [x] 유투브 미션 시작
 - [x] 30분 운동하기
 - [x] 알고리즘 1문제 
+
+
+## 3월 10일
+- [x] 유튜브 미션 하기
+- [x] 9시 스터디
+- [x] 스터디 과제하기
