[아서] 3월 10일 완료

--- a/아서/3월7일~3월13일.md
+++ b/아서/3월7일~3월13일.md
@@ -19,6 +19,6 @@
 
 ## 3월 10일
 
-- [ ] 블랙잭 미션 진행하기 - 게임 매니저, 규칙, 컨트롤러, 뷰 생성
-- [ ] 추상클래스와 인터페이스 정리하기
+- [x] 블랙잭 미션 진행하기 - 게임 매니저, 규칙, 컨트롤러, 뷰 생성
+- [x] 추상클래스와 인터페이스 정리하기
 
