[아서] 3월10일 계획 (#56)
* [아서] 3월10일 계획

* [아서] 3월 10일 완료

--- a/아서/3월7일~3월13일.md
+++ b/아서/3월7일~3월13일.md
@@ -15,3 +15,10 @@
 - [x] 블랙잭 미션 진행하기 - 페어와 가벼운 대화하기
 - [x] 객체지향의 사실과 오해 3장 읽기
 
+
+
+## 3월 10일
+
+- [x] 블랙잭 미션 진행하기 - 게임 매니저, 규칙, 컨트롤러, 뷰 생성
+- [x] 추상클래스와 인터페이스 정리하기
+
