[아서] 3월 11일 계획

--- a/아서/3월7일~3월13일.md
+++ b/아서/3월7일~3월13일.md
@@ -22,3 +22,12 @@
 - [x] 블랙잭 미션 진행하기 - 게임 매니저, 규칙, 컨트롤러, 뷰 생성
 - [x] 추상클래스와 인터페이스 정리하기
 
+
+
+## 3월 11일
+
+- [ ] 10:30~12:30 자바 문법 강의
+- [ ] 13:00~13:30 면담
+- [ ] 14:00~14:30 포수타
+- [ ] 블랙잭 리팩토링 & PR
+
