--- a/민초/3월7일-3월13일.md
+++ b/민초/3월7일-3월13일.md
@@ -14,9 +14,17 @@
 - [x] OS 스터디 4-3 발표 준비
 - [x] 이마트 가기
 
-# 3. 9
+# 3. 10
 
 - [x] 유튜브 step1 미션
 - [x] 풀업 100개
 - [x] 딥스 100개
 - [x] OS 스터디 4-5 준비
+
+# 3. 11
+
+- [x] 유튜브 step1 미션
+- [x] 풀업 100개
+- [x] 딥스 100개
+- [x] OS 스터디 5-1 준비
+
