[파랑] 3월11일 계획 완료

--- a/파랑/3월7일-3월13일.md
+++ b/파랑/3월7일-3월13일.md
@@ -25,7 +25,11 @@
 대충 구현은 다 했는데 아직 리팩토링할 부분이 남아서 아마 내일 마저 하고 제출할 듯 하다.
 
 ### 3월 11일 (금)
-- [ ] 블랙잭 미션 1단계 제출
-- [ ] 6시 필라테스
-- [ ] 학교 도서관에서 `코딩을 지탱하는 기술`, `객체지향의 사실과 오해` 대출하기
-- [ ] 로또 미션 마지막 리팩토링
+- [x] 블랙잭 미션 1단계 제출
+- [x] 6시 필라테스
+- [x] 학교 도서관에서 `코딩을 지탱하는 기술`, `객체지향의 사실과 오해` 대출하기
+- [x] 로또 미션 마지막 리팩토링
+---
+중간 회고 끝나고 게더에서 몇몇 데일리조 크루들과 이야기를 나눴다. 데일리미팅과 회식 때 말고 이렇게 따로 얘기 나눈 건 처음이었다.
+우리 데일리조는 다른 조에 비해 비교적 덜 친한 것 같아서 조금 슬펐는데 이렇게 따로 게더에서 만나서 얘기 나누니까 좋았다ㅎㅎ.
+종종 게더에 들어가 봐야겠다!
