[파랑] 3월11일 계획 (#70)
* [파랑] 3월11일 계획

* [파랑] 3월11일 계획 완료

--- a/파랑/3월7일-3월13일.md
+++ b/파랑/3월7일-3월13일.md
@@ -9,7 +9,7 @@
 - [x] 6시 30분 필라테스
 - [x] 로또 미션에서 배운 내용 정리
 - [x] `이펙티브 자바`, `자바 기본서` 책 사기
-
+---
 페어 프로그래밍을 온라인으로 할 줄 알고 계획을 짰는데 오프라인으로 하는 바람에 계획이 밀렸다.
 3명 페어가 걸려서 페어들이랑 셋이서 저녁 8시 30분까지 미션 구현하다가 9시에 필라테스 갔다와서 오자마자 남은 일들을 해치웠다.
 이 스터디 안 했으면 그냥 피곤해서 침대로 직행했을 것 같은데 확실히 효과가 좋은 것 같다^^... 
@@ -17,9 +17,19 @@
 
 ### 3월 10일 (목)
 - [x] 하루종일 블랙잭 미션 페어 프로그래밍
-
+---
 오늘은 우리 집에 페어들이랑 모여서 하루종일 코딩을 했다.
 카페에서 마스크 쓰고 코딱지만한 모니터 보면서 코딩하다가 편하게 집에서 32인치 모니터로 페어 프로그래밍 하니까 완전 편했다.
 점심도 근처 식당에서 맛있는 거 먹고 저녁은 상수 `삭` 떡튀순 + 심술 먹었다. 굳ㅎ
 3명이서 페어 어떻게 하지 걱정 많았는데 더 많은 의견도 들을 수 있고 홀수라서 결정을 아주 민주적으로 내릴 수 있다는 장점(?)이 있었다. 3인 페어 오히려 좋아?
 대충 구현은 다 했는데 아직 리팩토링할 부분이 남아서 아마 내일 마저 하고 제출할 듯 하다.
+
+### 3월 11일 (금)
+- [x] 블랙잭 미션 1단계 제출
+- [x] 6시 필라테스
+- [x] 학교 도서관에서 `코딩을 지탱하는 기술`, `객체지향의 사실과 오해` 대출하기
+- [x] 로또 미션 마지막 리팩토링
+---
+중간 회고 끝나고 게더에서 몇몇 데일리조 크루들과 이야기를 나눴다. 데일리미팅과 회식 때 말고 이렇게 따로 얘기 나눈 건 처음이었다.
+우리 데일리조는 다른 조에 비해 비교적 덜 친한 것 같아서 조금 슬펐는데 이렇게 따로 게더에서 만나서 얘기 나누니까 좋았다ㅎㅎ.
+종종 게더에 들어가 봐야겠다!
