feat: 3월10일 계획 완료

--- a/코린/3월7일-3월13일.md
+++ b/코린/3월7일-3월13일.md
@@ -12,6 +12,6 @@
 - [x] 블랙잭 페어프로그래밍
 
 ## 3월11일
-- [ ] 블랙잭 리팩터링 및 PR 보내기
-- [ ] 면담 사전 메일 보내기
-- [ ] 객체지향의사실과오해 ~p.105
+- [x] 블랙잭 리팩터링 및 PR 보내기
+- [x] 면담 사전 메일 보내기
+- [x] 객체지향의사실과오해 ~p.105
