[오리] 3월 12일 계획 완료

--- a/오리/3월7일~3월13일.md
+++ b/오리/3월7일~3월13일.md
@@ -14,7 +14,7 @@
 - [x] 숙면
 
 ### 3월 11일 (금)
-- [ ] 10시30분 피드백강의
-- [ ] 포수타
-- [ ] 모던자바인액션 5장 다시읽기
-- [ ] 저녁약속
+- [x] 10시30분 피드백강의
+- [x] 포수타
+- [x] 모던자바인액션 5장 다시읽기
+- [x] 저녁약속
