--- a/오리/3월7일~3월13일.md
+++ b/오리/3월7일~3월13일.md
@@ -8,7 +8,13 @@
 - [x] 블랙잭 페어프로그래밍
 - [x] 테코톡 대본 정리 및 연습
 
-### 3월 10 (목)
+### 3월 10일 (목)
 - [x] 블랙잭 마무리 및 제출
 - [x] 테코톡
 - [x] 숙면
+
+### 3월 11일 (금)
+- [x] 10시30분 피드백강의
+- [x] 포수타
+- [x] 모던자바인액션 5장 다시읽기
+- [x] 저녁약속
