--- a/티거/3월14일-3월20일.md
+++ b/티거/3월14일-3월20일.md
@@ -2,5 +2,5 @@
 
 ## 3월 14일 (월)
 
-- [ ] 유튜브 1단계 리뷰 피드백
-- [ ] < Deep Dive > 41.3 디바운스와 스로틀
+- [x] 유튜브 1단계 리뷰 피드백
+- [x] < Deep Dive > 41.3 디바운스와 스로틀
