220314 잉 일정 완료

--- a/잉/3월14일-3월20일.md
+++ b/잉/3월14일-3월20일.md
@@ -1,4 +1,4 @@
 ### 3월 14일 (월)
-- [ ] 블랙잭 1단계 피드백 반영 후 PR!!
-- [ ] 운동 1시간
-- [ ] 이팩티브 자바 아이탬19 
+- [X] 블랙잭 1단계 피드백 반영 후 PR!!
+- [X] 운동 1시간
+- [X] 이팩티브 자바 아이탬18
