feat: 3월14일 코린 계획 완료

--- a/코린/3월14일-3월20일.md
+++ b/코린/3월14일-3월20일.md
@@ -1,5 +1,5 @@
 ## 3월14일
 
-- [ ] 블랙잭 리뷰 반영해서 PR보내기
-- [ ] 블랙잭 리뷰 정리
-- [ ] 추상클래스, 인터페이스 정리
+- [x] 블랙잭 리뷰 반영해서 PR보내기
+- [x] 블랙잭 리뷰 정리
+- [x] 추상클래스, 인터페이스 정리
