[아서] 3월 15일 계획

--- a/아서/3월14일~3월20일 .md
+++ b/아서/3월14일~3월20일 .md
@@ -6,3 +6,13 @@
 - [x] 블랙잭 리뷰 수정 및 PR 요청
 - [x] 5주차 위클리 회고 작성
 - [x] 블랙잭 미션 중 공부한 내용 포스팅
+
+
+
+## 3월 15일
+
+- [ ] 테코톡 대본 및 피피티 수정
+- [ ] 블랙잭 2단계 시작
+- [ ] 코딩을 지탱하는 기술 4장,5장 읽기
+- [ ] 블랙잭 미션 중 공부한 내용 포스팅
+- [ ] 저녁 약속
