--- a/코린/3월14일-3월20일.md
+++ b/코린/3월14일-3월20일.md
@@ -3,3 +3,9 @@
 - [x] 블랙잭 리뷰 반영해서 PR보내기
 - [x] 블랙잭 리뷰 정리
 - [x] 추상클래스, 인터페이스 정리
+
+## 3월15일
+
+- [ ] 블랙잭 리뷰 반영해서 PR보내기
+- [ ] 오늘 수업 내용 정리
+- [ ] 저녁 약속
