--- a/앨버/3월14일-3월20일.md
+++ b/앨버/3월14일-3월20일.md
@@ -4,3 +4,10 @@
 - [x] 로또 미션 회고
 - [x] 책 1 / 3 읽기
 - [x] 자바스크립트 공부 chapter 1
+
+
+## 3월 15일
+
+- [ ] 개발책 1/3읽기
+- [ ] 자바스크립트 공부 chapter 1
+- [ ] 코드리뷰 스터디 과제 1/2
