--- a/아서/3월14일~3월20일 .md
+++ b/아서/3월14일~3월20일 .md
@@ -11,8 +11,8 @@
 
 ## 3월 15일
 
-- [ ] 테코톡 대본 및 피피티 수정
-- [ ] 블랙잭 2단계 시작
-- [ ] 코딩을 지탱하는 기술 4장,5장 읽기
-- [ ] 블랙잭 미션 중 공부한 내용 포스팅
-- [ ] 저녁 약속
+- [x] 테코톡 대본 및 피피티 수정
+- [x] 블랙잭 2단계 시작
+- [x] 코딩을 지탱하는 기술 4장,5장 읽기
+- [x] 블랙잭 미션 중 공부한 내용 포스팅
+- [x] 저녁 약속
