--- a/민초/3월14일-3월20일.md
+++ b/민초/3월14일-3월20일.md
@@ -6,8 +6,8 @@
 
 # 3.15.
 
-- [ ] 유튜브 미션 피드백 오면 반영
-- [ ] os 스터디 5-3 준비
-- [ ] 풀업 100개
-- [ ] 포코 추천 Promise 책 50페이지 읽기
+- [x] 유튜브 미션 피드백 오면 반영
+- [x] os 스터디 5-3 준비
+- [x] 풀업 100개
+- [x] 포코 추천 Promise 책 50페이지 읽기
 
