[민초] 3월 15일 계획 (#87)
* [민초] 3월 15일 계획

* [민초] 3월 15일 계획

--- a/민초/3월14일-3월20일.md
+++ b/민초/3월14일-3월20일.md
@@ -4,3 +4,10 @@
 - [x] os 스터디 5-2 준비
 - [x] 풀업 150개
 
+# 3.15.
+
+- [x] 유튜브 미션 피드백 오면 반영
+- [x] os 스터디 5-3 준비
+- [x] 풀업 100개
+- [x] 포코 추천 Promise 책 50페이지 읽기
+
