[티거] 3월 15일 완료

--- a/티거/3월14일-3월20일.md
+++ b/티거/3월14일-3월20일.md
@@ -7,8 +7,8 @@
 
 ## 3월 15일 (화)
 
-- [ ] 10시 30분 강의 < 유튜브 강의실 미션 1단계 피드백 >
-- [ ] 유튜브 1단계 리뷰 피드백
-- [ ] 유튜브 2단계 시작
-  - [ ] 구현할 기능 목록 정리
-  - [ ] 설계
+- [x] 10시 30분 강의 < 유튜브 강의실 미션 1단계 피드백 >
+- [x] 유튜브 1단계 리뷰 피드백
+- [x] 유튜브 2단계 시작
+  - [x] 구현할 기능 목록 정리
+  - [x] 설계
