[티거] 3월 15일 계획 (#89)
컨디션이 괜찮아지다가 안 괜찮아지다가를 반복한다
뭐 어떻든 드디어 격리 해제 🤭
자정 지나면 쓰레기 버리러 가야지
아침에 산책도 해야지
일찍 일어나면 카페도 가야지~!
날씨가 얼마나 따뜻해졌을지 기대된다

--- a/티거/3월14일-3월20일.md
+++ b/티거/3월14일-3월20일.md
@@ -4,3 +4,11 @@
 
 - [x] 유튜브 1단계 리뷰 피드백
 - [x] < Deep Dive > 41.3 디바운스와 스로틀
+
+## 3월 15일 (화)
+
+- [x] 10시 30분 강의 < 유튜브 강의실 미션 1단계 피드백 >
+- [x] 유튜브 1단계 리뷰 피드백
+- [x] 유튜브 2단계 시작
+  - [x] 구현할 기능 목록 정리
+  - [x] 설계
