220315 앨버 계획 완료

--- a/앨버/3월14일-3월20일.md
+++ b/앨버/3월14일-3월20일.md
@@ -7,6 +7,6 @@
 
 ## 3월 15일
 
-- [ ] 개발책 1/3읽기
-- [ ] 자바스크립트 공부 chapter 1
-- [ ] 코드리뷰 스터디 과제 1/2
+- [x] 개발책 1/3읽기
+- [x] 자바스크립트 공부 chapter 1
+- [x] 코드리뷰 스터디 과제 1/2
