[오리] 3월 16일 계획 완료

--- a/오리/3월14일~3월21일.md
+++ b/오리/3월14일~3월21일.md
@@ -3,6 +3,6 @@
 - [x] 슬랙봇 설계(?)
 
 ### 3월 15일 (화)
-- [ ] 10시30분 자동차 강의
-- [ ] 블랙잭 2단계 시작
-- [ ] 집 대청소 🔥
+- [x] 10시30분 자동차 강의
+- [x] 블랙잭 2단계 시작
+- [x] 집 대청소 🔥
