220315 잉 일정 완료

--- a/잉/3월14일-3월20일.md
+++ b/잉/3월14일-3월20일.md
@@ -4,6 +4,6 @@
 - [X] 이팩티브 자바 아이탬18
 
 ### 3월 15일 (화)
-- [ ] 운동1.
-- [ ] 이팩티브 자바 아이탬19.
-- [ ] 블랙잭 1단계 리팩토링 후 PR. 
+- [X] 운동1.
+- [X] 이팩티브 자바 아이탬19.
+- [X] 블랙잭 1단계 리팩토링 후 PR. 
