[잉] 3월15일 계획 (#91)
* 220315 잉 일정
* 220315 잉 일정 완료

--- a/잉/3월14일-3월20일.md
+++ b/잉/3월14일-3월20일.md
@@ -2,3 +2,8 @@
 - [X] 블랙잭 1단계 피드백 반영 후 PR!!
 - [X] 운동 1시간
 - [X] 이팩티브 자바 아이탬18
+
+### 3월 15일 (화)
+- [X] 운동1.
+- [X] 이팩티브 자바 아이탬19.
+- [X] 블랙잭 1단계 리팩토링 후 PR. 
