[민초] 3월 16일 계획

--- a/민초/3월14일-3월20일.md
+++ b/민초/3월14일-3월20일.md
@@ -11,3 +11,10 @@
 - [x] 풀업 100개
 - [x] 포코 추천 Promise 책 50페이지 읽기
 
+# 3.16.
+
+- [x] os 스터디 5-4
+- [ ] 풀업 100개
+- [ ] 딥스 100개
+- [ ] js tutorial 네트워크 요청 파트 읽기
+
