[아서] 3월 16일 계획

--- a/아서/3월14일~3월20일 .md
+++ b/아서/3월14일~3월20일 .md
@@ -16,3 +16,12 @@
 - [x] 코딩을 지탱하는 기술 4장,5장 읽기
 - [x] 블랙잭 미션 중 공부한 내용 포스팅
 - [x] 저녁 약속
+
+
+
+## 3월 16일
+
+- [ ] 10시30분 글쓰기 수업
+- [ ] 테코톡 리허설
+- [ ] 블랙잭 미션 2단계 PR 보내기
+- [ ] 산책
