--- a/파랑/3월14일-3월20일.md
+++ b/파랑/3월14일-3월20일.md
@@ -15,3 +15,9 @@
 오늘 필라테스 쌤이 하체 유연성이 떨어진다고 매일 스트레칭을 하라는 숙제를 내줬다. 매일 자기 전에 스트레칭 꼭 하고 자야겠다(제발).
 필라테스 끝나고는 원래 있던 저녁 약속이 취소돼서 '저녁 약속도 지키지 않으면 벌금인가?' 혼자 생각했는데 마침 근처 사는 친구가 같이 저녁 먹자고 연락이 왔다. 덕분에 19시 약속을 지킬 수 있었다😂.
 그리고 블랙잭 2단계 시작했는데 참가자가 이름, 카드, 베팅금액 이렇게 3개의 인스턴스 변수를 갖게 될 것 같아서 고민이다🤔. 나머지 고민은 내일 해야지ㅎㅎ.
+
+### 3월 16일 (수)
+- [ ] 블랙잭 2단계 기능 구현 완료하기
+- [ ] 클래스와 인스턴스(심화) 강의 정리
+- [ ] 코딩을 지탱하는 기술 3-4장 읽기
+- [ ] 19시 30분 필라테스
