--- a/앨버/3월14일-3월20일.md
+++ b/앨버/3월14일-3월20일.md
@@ -10,3 +10,11 @@
 - [x] 개발책 1/3읽기
 - [x] 자바스크립트 공부 chapter 1
 - [x] 코드리뷰 스터디 과제 1/2
+
+
+## 3월 16일
+
+- [ ] 코드리뷰 스터디 과제 마무리
+- [ ] 개발책 chapter 1 읽기
+- [ ] 스터디 22시30분
+- [ ] 유튜브 피드백 반영 후 2단계 시작 ( 목요일 마감 목표 )
