--- a/민초/3월14일-3월20일.md
+++ b/민초/3월14일-3월20일.md
@@ -14,7 +14,7 @@
 # 3.16.
 
 - [x] os 스터디 5-4
-- [ ] 풀업 100개
-- [ ] 딥스 100개
-- [ ] js tutorial 네트워크 요청 파트 읽기
+- [x] 풀업 100개
+- [x] 딥스 100개
+- [x] js tutorial 네트워크 요청 파트 읽기
 
