--- a/티거/3월14일-3월20일.md
+++ b/티거/3월14일-3월20일.md
@@ -15,12 +15,12 @@
 
 ## 3월 16일 (수)
 
-- [ ] LMS < 나만의 유튜브 강의실 - 웹의 동작 > 자료 읽기
-  - [ ] 웹의 동작
-  - [ ] AJAX & JSON
-  - [ ] RESTful API
-  - [ ] Promise & async/await
+- [x] LMS < 나만의 유튜브 강의실 - 웹의 동작 > 자료 읽기
+  - [x] 웹의 동작
+  - [x] AJAX & JSON
+  - [x] RESTful API
+  - [x] Promise & async/await
   - [x] loading & Skeleton UI
   - [x] lazy loading
-  - [ ] debounce, throttle
-- [ ] 유튜브 2단계 기능 구현
+  - [x] debounce, throttle
+- [x] 유튜브 2단계 기능 구현
