[티거] 3월 16일 계획 (#99)
오늘은 하루 종일 두통에 시달렸다 🤦🏻‍♀️
(내 몸 제발 눈치 좀 챙겨)
그래서 계속 자다 깨다를 반복했다...
우테코 들어온 이후로 최악이었던 하루?
그게 바로 오늘이었다...!

일과 시간 내내 우리 데일리 게더에 포코조랑 같이 있었는데
자다가 채팅 소리에 놀라서 깨고 슬랙 알림에 놀라서 깨고 ㅋㅋㅋㅋㅋ 무한 반복이었다

하루를 통으로 날려버린 이 멋진 기분~!
뭐야 제 하루 돌려줘요;
할 일을 꾸역꾸역 하긴 했는데 이게 맞나
너무 꾸역꾸역이라 전부 다시 봐야 할 것 같다

그래도 지나간 시간에 대한 미련은 전혀 없다
새로운 하루를 잘 살아봐야지 다짐하면서 또... 잘 거다

몸 튼튼 마음 튼튼 티거 커밍 순

--- a/티거/3월14일-3월20일.md
+++ b/티거/3월14일-3월20일.md
@@ -12,3 +12,15 @@
 - [x] 유튜브 2단계 시작
   - [x] 구현할 기능 목록 정리
   - [x] 설계
+
+## 3월 16일 (수)
+
+- [x] LMS < 나만의 유튜브 강의실 - 웹의 동작 > 자료 읽기
+  - [x] 웹의 동작
+  - [x] AJAX & JSON
+  - [x] RESTful API
+  - [x] Promise & async/await
+  - [x] loading & Skeleton UI
+  - [x] lazy loading
+  - [x] debounce, throttle
+- [x] 유튜브 2단계 기능 구현
