--- a/파랑/3월14일-3월20일.md
+++ b/파랑/3월14일-3월20일.md
@@ -15,3 +15,14 @@
 오늘 필라테스 쌤이 하체 유연성이 떨어진다고 매일 스트레칭을 하라는 숙제를 내줬다. 매일 자기 전에 스트레칭 꼭 하고 자야겠다(제발).
 필라테스 끝나고는 원래 있던 저녁 약속이 취소돼서 '저녁 약속도 지키지 않으면 벌금인가?' 혼자 생각했는데 마침 근처 사는 친구가 같이 저녁 먹자고 연락이 왔다. 덕분에 19시 약속을 지킬 수 있었다😂.
 그리고 블랙잭 2단계 시작했는데 참가자가 이름, 카드, 베팅금액 이렇게 3개의 인스턴스 변수를 갖게 될 것 같아서 고민이다🤔. 나머지 고민은 내일 해야지ㅎㅎ.
+
+### 3월 16일 (수)
+- [x] 블랙잭 2단계 기능 구현 완료하기
+- [x] 클래스와 인스턴스(심화) 강의 정리
+- [x] 코딩을 지탱하는 기술 3-4장 읽기
+- [x] 19시 30분 필라테스
+---
+데일리 미팅에서 베루스가 `자바 퍼즐러` 책의 퀴즈를 준비해왔다. 우승자 상품도 `자바 퍼즐러`였는데, 금전 관계상 절판된 구 버전의 중고 도서를 샀다고 했다.
+구구가 안타까워서 본인이 새 책으로 사주겠다고 했지만 이미 책은 베루스의 집으로 향하는 중이었다ㅋㅋㅋ.
+이런 퀴즈 자신 없었는데 이와중에 내가 한 문제를 맞히고 말았다. 심지어 3명이 동점이라 사다리타기를 했는데 내가 걸렸다. 머선일.
+데일리 크루들이 꽝 아니냐고 했지만 상품이 뭐든 그냥 당첨돼서 기뻤다ㅋㅋㅋㅋㅋ. 베루스는 이 글을 안 보겠지만 베루스 고마워요.. 담에 만나면 주세요....
