[아서] 3월 17일 일정완료

--- a/아서/3월14일~3월20일 .md
+++ b/아서/3월14일~3월20일 .md
@@ -21,7 +21,7 @@
 
 ## 3월 16일
 
-- [ ] 10시30분 글쓰기 수업
-- [ ] 테코톡 리허설
-- [ ] 블랙잭 미션 2단계 PR 보내기
-- [ ] 산책
+- [x] 10시30분 글쓰기 수업
+- [x] 테코톡 리허설
+- [x] 블랙잭 미션 2단계 PR 보내기
+- [x] 산책
