--- a/코린/3월14일-3월20일.md
+++ b/코린/3월14일-3월20일.md
@@ -12,6 +12,6 @@
 
 ## 3월16일
 
-- [ ] 블랙잭 1단계 리뷰 반영하기
-- [ ] 블랙잭 2단계 설계 및 일부 구현
-- [ ] 저녁 약속
+- [x] 블랙잭 1단계 리뷰 반영하기
+- [x] 블랙잭 2단계 설계 및 일부 구현
+- [x] 저녁 약속
