220316 잉 일정 완료

--- a/잉/3월14일-3월20일.md
+++ b/잉/3월14일-3월20일.md
@@ -9,7 +9,7 @@
 - [X] 블랙잭 1단계 리팩토링 후 PR. 
 
 ### 3월 16일 (수)
-- [ ] 운동 1시간.
-- [ ] 이팩티브 자바 아이탬15.
-- [ ] 블랙잭 1단계 피드백오면 PR. 
-- [ ] 졸다가 못들은 네오강의 다시보기. 
+- [X] 운동 1시간.
+- [X] 이팩티브 자바 아이탬15.
+- [X] 블랙잭 1단계 피드백오면 PR. 
+- [X] 졸다가 못들은 네오강의 다시보기. 
