[파랑] 3월17일 계획

--- a/파랑/3월14일-3월20일.md
+++ b/파랑/3월14일-3월20일.md
@@ -26,3 +26,9 @@
 구구가 안타까워서 본인이 새 책으로 사주겠다고 했지만 이미 책은 베루스의 집으로 향하는 중이었다ㅋㅋㅋ.
 이런 퀴즈 자신 없었는데 이와중에 내가 한 문제를 맞히고 말았다. 심지어 3명이 동점이라 사다리타기를 했는데 내가 걸렸다. 머선일.
 데일리 크루들이 꽝 아니냐고 했지만 상품이 뭐든 그냥 당첨돼서 기뻤다ㅋㅋㅋㅋㅋ. 베루스는 이 글을 안 보겠지만 베루스 고마워요.. 담에 만나면 주세요....
+
+### 3월 17일 (목)
+- [ ] 블랙잭 2단계 PR
+- [ ] 프롤로그 글쓰기
+- [ ] 코딩을 지탱하는 기술 5-6장 읽기
+- [ ] 20시 필라테스
