--- a/잉/3월14일-3월20일.md
+++ b/잉/3월14일-3월20일.md
@@ -13,3 +13,9 @@
 - [X] 이팩티브 자바 아이탬15.
 - [X] 블랙잭 1단계 피드백오면 PR. 
 - [X] 졸다가 못들은 네오강의 다시보기. 
+
+### 3월 17일 (목)
+- [ ] 운동 1시간.
+- [ ] 이팩티브 자바 아이탬16, 17.
+- [ ] 블랙잭 2단계 PR.
+
