--- a/앨버/3월14일-3월20일.md
+++ b/앨버/3월14일-3월20일.md
@@ -14,7 +14,7 @@
 
 ## 3월 16일
 
-- [ ] 코드리뷰 스터디 과제 마무리
-- [ ] 개발책 chapter 1 읽기
-- [ ] 스터디 22시30분
-- [ ] 유튜브 피드백 반영 후 2단계 시작 ( 목요일 마감 목표 )
+- [x] 코드리뷰 스터디 과제 마무리
+- [x] 개발책 chapter 1 읽기
+- [x] 스터디 22시30분
+- [x] 유튜브 피드백 반영 후 2단계 시작 ( 목요일 마감 목표 )
