[파랑] 3월17일 계획완료

--- a/파랑/3월14일-3월20일.md
+++ b/파랑/3월14일-3월20일.md
@@ -28,7 +28,12 @@
 데일리 크루들이 꽝 아니냐고 했지만 상품이 뭐든 그냥 당첨돼서 기뻤다ㅋㅋㅋㅋㅋ. 베루스는 이 글을 안 보겠지만 베루스 고마워요.. 담에 만나면 주세요....
 
 ### 3월 17일 (목)
-- [ ] 블랙잭 2단계 PR
-- [ ] 프롤로그 글쓰기
-- [ ] 코딩을 지탱하는 기술 5-6장 읽기
-- [ ] 20시 필라테스
+- [x] 블랙잭 2단계 PR
+- [x] 프롤로그 글쓰기
+- [x] 코딩을 지탱하는 기술 5-6장 읽기
+- [x] 20시 필라테스
+---
+2단계 PR 날리는데 진짜 똥멍청이 짓을 했다... PR을 보내려는데 커밋이 이상해서 한참을 고민했다.
+도저히 안 되겠어서 스터디 슬랙에 질문을 올렸는데, 오리 `duck`분에 내 브랜치가 아니라 main으로 PR을 날리고 있었다는 걸 깨달았다.
+진짜 용기 내서 올린 건데 쥐구멍에 숨고 싶었다ㅎ.. 그래도 내 실수를 일찍 깨달아서 정말 다행이었다. 흑흑. 감사합니다.
+그리고 방금 필라테스 PT 받고 왔는데 오늘 운동이 너무 힘들어서 지금 쓰러질 것 같다. 할 일도 일찍 끝낸 김에 얼른 자야겠다.
