--- a/아서/3월14일~3월20일 .md
+++ b/아서/3월14일~3월20일 .md
@@ -25,3 +25,13 @@
 - [x] 테코톡 리허설
 - [x] 블랙잭 미션 2단계 PR 보내기
 - [x] 산책
+
+
+
+## 3월 17일
+
+- [x] 테코톡 발표
+- [x] 모던 자바 인 액션 3장 정리
+- [x] 미션에 적용할만한 이펙티브 자바 아이템 찾고 읽고 정리
+- [x] 블랙잭 미션 1단계 마감회고
+
