--- a/앨버/3월14일-3월20일.md
+++ b/앨버/3월14일-3월20일.md
@@ -22,6 +22,6 @@
 
 ## 3월 17일
 
-- [ ] 21시 스터디
-- [ ] 자바스크립트 공부 chapter 1
-- [ ] 유튜브 2단계 미션 2/3 (금요일 마감 목표)
+- [x] 21시 스터디
+- [x] 자바스크립트 공부 chapter 1
+- [x] 유튜브 2단계 미션 2/3 (금요일 마감 목표)
