--- a/앨버/3월14일-3월20일.md
+++ b/앨버/3월14일-3월20일.md
@@ -14,7 +14,14 @@
 
 ## 3월 16일
 
-- [ ] 코드리뷰 스터디 과제 마무리
-- [ ] 개발책 chapter 1 읽기
-- [ ] 스터디 22시30분
-- [ ] 유튜브 피드백 반영 후 2단계 시작 ( 목요일 마감 목표 )
+- [x] 코드리뷰 스터디 과제 마무리
+- [x] 개발책 chapter 1 읽기
+- [x] 스터디 22시30분
+- [x] 유튜브 피드백 반영 후 2단계 시작 ( 목요일 마감 목표 )
+
+
+## 3월 17일
+
+- [x] 21시 스터디
+- [x] 자바스크립트 공부 chapter 1
+- [x] 유튜브 2단계 미션 2/3 (금요일 마감 목표)
