[오리] 3월 18일 계획

--- a/오리/3월14일~3월21일.md
+++ b/오리/3월14일~3월21일.md
@@ -7,10 +7,15 @@
 - [x] 블랙잭 2단계 시작
 - [x] 집 대청소 🔥
 
-### 3월 16일 (월)
+### 3월 16일 (수)
 - [x] 글쓰기 특강
 - [x] 새벽에 급발진한 블랙잭 갈아엎기 마무리....
 
-### 3월 17일 (화)
+### 3월 17일 (목)
 - [x] 테코톡 듣기
 - [x] 모던자바인액션 6장
+
+### 3월 18일 (금)
+- [ ] 10시30분 블랙잭 강의
+- [ ] 모던 자바 인 액션 7장
+- [ ] 3시 발표준비
