feat: 코린 3월18일 계획 추가

--- a/코린/3월14일-3월20일.md
+++ b/코린/3월14일-3월20일.md
@@ -18,5 +18,11 @@
 
 ## 3월17일
 
-- [ ] 블랙잭 2단계 끝내고 PR 보내기
-- [ ] 테코톡 보기
+- [x] 블랙잭 2단계 끝내고 PR 보내기
+- [x] 테코톡 보기
+- [x] 블로그 글 작성
+
+## 3월18일
+- [ ] 학습로그 작성
+- [ ] 블랙잭 2단계 리뷰 반영 및 PR
+- [ ] 모던 자바 인 액션 ~p.65
