[파랑] 3월18일 계획

--- a/파랑/3월14일-3월20일.md
+++ b/파랑/3월14일-3월20일.md
@@ -37,3 +37,10 @@
 도저히 안 되겠어서 스터디 슬랙에 질문을 올렸는데, 오리 `duck`분에 내 브랜치가 아니라 main으로 PR을 날리고 있었다는 걸 깨달았다.
 진짜 용기 내서 올린 건데 쥐구멍에 숨고 싶었다ㅎ.. 그래도 내 실수를 일찍 깨달아서 정말 다행이었다. 흑흑. 감사합니다.
 그리고 방금 필라테스 PT 받고 왔는데 오늘 운동이 너무 힘들어서 지금 쓰러질 것 같다. 할 일도 일찍 끝낸 김에 얼른 자야겠다.
+
+### 3월 18일 (금)
+- [ ] 이불 빨래
+- [ ] 갤탭 백업 및 초기화
+- [ ] 블랙잭 2단계 리팩토링
+- [ ] 18시 필라테스
+- [ ] 저녁 약속
