[에덴] 3월 17 일 계획 (#114)
* 3월 17일 에덴 계획

* 3월 17일 에덴 계획 실패

--- a/에덴/3월14일-3월20일.md
+++ b/에덴/3월14일-3월20일.md
@@ -14,3 +14,9 @@
 - [x] 스터디 발표 자료 준비하기
 - [x] 블랙잭 2단계 레츠고
 - [x] 저녁 약속
+
+## 3월 17일
+
+- [x] 누나 심부름하기
+- [ ] 블랙잭 2단계 PR 날리기
+- [x] 아이템 65 발표 자료 및 대본 완성하기
