[아서] 3월 18일 일정완료

--- a/아서/3월14일~3월20일 .md
+++ b/아서/3월14일~3월20일 .md
@@ -39,6 +39,6 @@
 
 ## 3월 18일
 
-- [ ] 10시30분 블랙잭 피드백 수업
-- [ ] 백기선 상태패턴 강의 듣고 정리
-- [ ] 객체 지향의 사실과 오해 스윽 다 읽기
+- [x] 10시30분 블랙잭 피드백 수업
+- [x] 백기선 상태패턴 강의 듣고 정리
+- [x] 객체 지향의 사실과 오해 스윽 다 읽기
