[아서] 3월 18일 계획 (#121)
* [아서] 3월 18일 계획

* [아서] 3월 18일 계획추가

* [아서] 3월 18일 일정완료

--- a/아서/3월14일~3월20일 .md
+++ b/아서/3월14일~3월20일 .md
@@ -35,3 +35,10 @@
 - [x] 미션에 적용할만한 이펙티브 자바 아이템 찾고 읽고 정리
 - [x] 블랙잭 미션 1단계 마감회고
 
+
+
+## 3월 18일
+
+- [x] 10시30분 블랙잭 피드백 수업
+- [x] 백기선 상태패턴 강의 듣고 정리
+- [x] 객체 지향의 사실과 오해 스윽 다 읽기
