[오리] 3월 18일 계획 완료

--- a/오리/3월14일~3월21일.md
+++ b/오리/3월14일~3월21일.md
@@ -16,6 +16,6 @@
 - [x] 모던자바인액션 6장
 
 ### 3월 18일 (금)
-- [ ] 10시30분 블랙잭 강의
-- [ ] 모던 자바 인 액션 7장
-- [ ] 3시 발표준비
+- [x] 10시30분 블랙잭 강의
+- [x] 모던 자바 인 액션 7장
+- [x] 3시 발표준비
