--- a/파랑/3월14일-3월20일.md
+++ b/파랑/3월14일-3월20일.md
@@ -37,3 +37,13 @@
 도저히 안 되겠어서 스터디 슬랙에 질문을 올렸는데, 오리 `duck`분에 내 브랜치가 아니라 main으로 PR을 날리고 있었다는 걸 깨달았다.
 진짜 용기 내서 올린 건데 쥐구멍에 숨고 싶었다ㅎ.. 그래도 내 실수를 일찍 깨달아서 정말 다행이었다. 흑흑. 감사합니다.
 그리고 방금 필라테스 PT 받고 왔는데 오늘 운동이 너무 힘들어서 지금 쓰러질 것 같다. 할 일도 일찍 끝낸 김에 얼른 자야겠다.
+
+### 3월 18일 (금)
+- [x] 이불 빨래
+- [x] 갤탭 백업 및 초기화
+- [x] 블랙잭 2단계 리팩토링
+- [x] 18시 필라테스
+- [x] 저녁 약속
+---
+네오의 수업을 듣다가 갑자기 누전 차단기가 내려가서 집에 전기가 나갔다. 이런 일이 처음이라 한동안 벙쪄있다가 살펴보니 보일러가 문제의 원인이었다.
+보일러 전원을 뽑지 않으면 누전 차단기가 올라가지 않아서 결국 내일까지 보일러를 못 쓰게 됐다. 찬물에 씻었는데 머리가 깨지는 줄 알았다. 후 쉽지 않은 하루.
