3월 18일 에덴 계획 실패

--- a/에덴/3월14일-3월20일.md
+++ b/에덴/3월14일-3월20일.md
@@ -24,5 +24,5 @@
 ## 3월 18일
 
 - [ ] 블랙잭 2단계 PR 날리기 2트
-- [ ] 이펙티브 자바 아이템 29, 61, 63 공부
-- [ ] 친구 집들이 약속
+- [x] 이펙티브 자바 아이템 29, 61, 63 공부
+- [x] 친구 집들이 약속
