[에덴] 3월 18일 계획 (#123)
* 3월 18일 에덴 계획

* 3월 18일 에덴 계획 실패

--- a/에덴/3월14일-3월20일.md
+++ b/에덴/3월14일-3월20일.md
@@ -20,3 +20,9 @@
 - [x] 누나 심부름하기
 - [ ] 블랙잭 2단계 PR 날리기
 - [x] 아이템 65 발표 자료 및 대본 완성하기
+
+## 3월 18일
+
+- [ ] 블랙잭 2단계 PR 날리기 2트
+- [x] 이펙티브 자바 아이템 29, 61, 63 공부
+- [x] 친구 집들이 약속
