[티거] 3월 21일 완료

--- a/티거/3월21일-3월27일.md
+++ b/티거/3월21일-3월27일.md
@@ -3,7 +3,7 @@
 ## 3월 21일 (월)
 
 - [x] 산책 🏃🏻‍♀️
-- [ ] 16시 공원 면담
-- [ ] 유튜브 2단계 리뷰 피드백
-- [ ] LMS < 자판기 - SPA > 자료 읽기
-  - [ ] SPA
+- [x] 16시 공원 면담
+- [x] 유튜브 2단계 리뷰 피드백
+- [x] LMS < 자판기 - SPA > 자료 읽기
+  - [x] SPA
