[파랑] 3월21일 계획완료

--- a/파랑/3월21일-3월27일.md
+++ b/파랑/3월21일-3월27일.md
@@ -1,6 +1,9 @@
 ### 3월 21일 (월)
 - [x] 10시 필라테스 
-- [ ] 코딩을 지탱하는 기술 7-8장 읽기
-- [ ] 블랙잭 피드백 강의 정리
-- [ ] 17시 조조그린이랑 블랙잭 코드 공유
-- [ ] 저녁 약속
+- [x] 코딩을 지탱하는 기술 7-8장 읽기
+- [x] 블랙잭 피드백 강의 정리
+- [x] 17시 조조그린이랑 블랙잭 코드 공유
+- [x] 저녁 약속
+---
+블랙잭 피드백 강의 다시 들었는데 알듯 말듯 알쏭달쏭하다. 어려워.
+이제 블랙잭은 그만 생각하고 체스♟ 파이팅 해야지!!
