feat: 코린 계획 완료

--- a/코린/3월21일-3월27일.md
+++ b/코린/3월21일-3월27일.md
@@ -1,5 +1,5 @@
 ## 3월21일
 
-- [ ] 리뷰어에게 질문하기
-- [ ] 체스 도메인 지식 공부
-- [ ] 모던자바인액션 ~ p.76 
+- [x] 리뷰어에게 질문하기
+- [x] 체스 도메인 지식 공부
+- [x] 모던자바인액션 ~ p.76 
