[파랑] 3월22일 계획

--- a/파랑/3월21일-3월27일.md
+++ b/파랑/3월21일-3월27일.md
@@ -7,3 +7,7 @@
 ---
 블랙잭 피드백 강의 다시 들었는데 알듯 말듯 알쏭달쏭하다. 어려워.
 이제 블랙잭은 그만 생각하고 체스♟ 파이팅 해야지!!
+
+### 3월 22일 (화)
+- [ ] 체스 미션 시작
+- [ ] 코딩을 지탱하는 기술 9장 읽기
