--- a/티거/3월21일-3월27일.md
+++ b/티거/3월21일-3월27일.md
@@ -7,3 +7,8 @@
 - [x] 유튜브 2단계 리뷰 피드백
 - [x] LMS < 자판기 - SPA > 자료 읽기
   - [x] SPA
+
+## 3월 22일 (화)
+
+- [ ] 10시 30분 강의 < 자판기 미션 소개, TypeScript 기본 실습 >
+- [ ] 자판기 미션
