[티거] 3월 22일 완료

--- a/티거/3월21일-3월27일.md
+++ b/티거/3월21일-3월27일.md
@@ -10,5 +10,5 @@
 
 ## 3월 22일 (화)
 
-- [ ] 10시 30분 강의 < 자판기 미션 소개, TypeScript 기본 실습 >
-- [ ] 자판기 미션
+- [x] 10시 30분 강의 < 자판기 미션 소개, TypeScript 기본 실습 >
+- [x] 자판기 미션
