--- a/앨버/3월21일-3월27일.md
+++ b/앨버/3월21일-3월27일.md
@@ -3,3 +3,10 @@
 - [x] 유튜브 2단계 피드백 수정 후 PR
 - [x] 자바스크립트 강의 chapter 2개 수강
 - [x] 운동 30분
+
+
+## 3월 22일
+
+- [x] 자판기 미션 페어프로그래밍
+- [x] 운동 30분
+- [x] 스터디 과제 1/2
