--- a/에덴/3월21일-3월27일.md
+++ b/에덴/3월21일-3월27일.md
@@ -6,6 +6,6 @@
 
 ## 3월 22일
 
-- [ ] 체스 도메인 익히기
-- [ ] 체스 페어 진행
-- [ ] 이펙티브 자바 아이템 59 읽고 정리
+- [x] 체스 도메인 익히기
+- [x] 체스 페어 진행
+- [x] 이펙티브 자바 아이템 59 읽고 정리
