[에덴] 3월 22일 계획 (#141)
* 3월 22일 에덴 계획

* 3월 22일 에덴 계획 완료

--- a/에덴/3월21일-3월27일.md
+++ b/에덴/3월21일-3월27일.md
@@ -3,3 +3,9 @@
 - [x] 블랙잭 마무리하기
 - [x] 이펙티브 자바 아이템 23, 43, 31 공부
 - [x] 네오 강의 다시보기 마무리
+
+## 3월 22일
+
+- [x] 체스 도메인 익히기
+- [x] 체스 페어 진행
+- [x] 이펙티브 자바 아이템 59 읽고 정리
