[파랑] 3월23일 계획완료

--- a/파랑/3월21일-3월27일.md
+++ b/파랑/3월21일-3월27일.md
@@ -17,5 +17,7 @@
 내일 PCR 검사 결과가 나오는데 아마 양성일 것 같다. 결국 내 차례가 오는구나. 많이 안 아팠으면 좋겠는데 걱정이다ㅠㅠㅠ.
 
 ### 3월 23일 (수)
-- [ ] 체스 페어 프로그래밍
-- [ ] 30분 스트레칭
+- [x] 체스 페어 프로그래밍
+- [x] 30분 스트레칭
+---
+코로나 때문에 너무 피곤하다. 별로 아프진 않은데 기침이 자꾸 나온다. 빨리 자고싶다.
