--- a/파랑/3월21일-3월27일.md
+++ b/파랑/3월21일-3월27일.md
@@ -15,3 +15,9 @@
 어제 밤부터 목이 아픈가? 싶어서 아침에 자가 진단 키트를 해보니 양성이 나왔다.
 이번 미션은 페어 프로그래밍 기간이 길어서 굉장히 기대 하고 있었는데 졸지에 온라인으로만 하게 생겼다ㅠㅠ. 너무 아쉽다.
 내일 PCR 검사 결과가 나오는데 아마 양성일 것 같다. 결국 내 차례가 오는구나. 많이 안 아팠으면 좋겠는데 걱정이다ㅠㅠㅠ.
+
+### 3월 23일 (수)
+- [x] 체스 페어 프로그래밍
+- [x] 30분 스트레칭
+---
+코로나 때문에 너무 피곤하다. 별로 아프진 않은데 기침이 자꾸 나온다. 빨리 자고싶다.
