3월 24일 에덴 계획 완료

--- a/에덴/3월21일-3월27일.md
+++ b/에덴/3월21일-3월27일.md
@@ -18,6 +18,6 @@
 
 ## 3d월 24일
 
-- [ ] 글쓰기 고민하기
-- [ ] 체스 2단계 하던거 계속 진행
-- [ ] 이펙티브 자바 발표 준비 마무리
+- [x] 글쓰기 고민하기
+- [x] 체스 2단계 하던거 계속 진행
+- [x] 이펙티브 자바 발표 준비 마무리
