[파랑] 3월24일 계획 (#156)
* [파랑] 3월24일 계획

* 오타수정

* [파랑] 3월24일 계획완료

--- a/파랑/3월21일-3월27일.md
+++ b/파랑/3월21일-3월27일.md
@@ -21,3 +21,10 @@
 - [x] 30분 스트레칭
 ---
 코로나 때문에 너무 피곤하다. 별로 아프진 않은데 기침이 자꾸 나온다. 빨리 자고싶다.
+
+### 3월 24일 (목)
+- [x] 체스 페어 프로그래밍
+- [x] 30분 스트레칭
+---
+약 먹으니까 자꾸 잠이 온다. 중간중간 밥시간마다 계속 잤다.
+내일은 내가 데일리 마스터인데 뭐 할지 너무 고민된다. 뭐 하지?
