--- a/잉/3월21일-3월27일.md
+++ b/잉/3월21일-3월27일.md
@@ -10,3 +10,10 @@
 
 ### 3월 23일 (수)
 - [X] 체스 오프 페어 프로그래밍.
+
+### 3월 24일 (목)
+- [X] 체스 오프 페어 프로그래밍.
+
+### 3월 25일 (금)
+- [ ] 운동 1시간. 
+- [ ] 체스 페어 프로그래밍.
