[티거] 3월 25일 완료

--- a/티거/3월21일-3월27일.md
+++ b/티거/3월21일-3월27일.md
@@ -25,6 +25,6 @@
 
 ## 3월 25일 (금)
 
-- [ ] 10시 30분 강의 < 자판기 1단계 피드백 >
-- [ ] 14시 포수타
-- [ ] 자판기 1단계
+- [x] 10시 30분 강의 < TypeScript 이해하고 공부하기 >
+- [x] 14시 포수타
+- [x] 자판기 1단계
