[파랑] 3월25일 계획 (#164)
* [파랑] 3월25일 계획

* [파랑] 3월26일 계획완료

--- a/파랑/3월21일-3월27일.md
+++ b/파랑/3월21일-3월27일.md
@@ -28,3 +28,9 @@
 ---
 약 먹으니까 자꾸 잠이 온다. 중간중간 밥시간마다 계속 잤다.
 내일은 내가 데일리 마스터인데 뭐 할지 너무 고민된다. 뭐 하지?
+
+### 3월 25일 (금)
+- [x] 체스 페어 프로그래밍
+- [x] 30분 스트레칭
+---
+폰 개놈시키. 약 때문에 몽롱해. 나도 데일리 팀원들이랑 친해지고 싶다!!!
