--- a/에덴/3월21일-3월27일.md
+++ b/에덴/3월21일-3월27일.md
@@ -16,8 +16,14 @@
 - [x] 아이템 59 발표 자료 준비
 
 
-## 3d월 24일
+## 3월 24일
 
 - [x] 글쓰기 고민하기
 - [x] 체스 2단계 하던거 계속 진행
 - [x] 이펙티브 자바 발표 준비 마무리
+
+## 3월 25일
+
+- [x] 체스 2단계 리팩토링
+- [x] 이펙티브 자바 스터디
+- [x] 저녁 약속
