220328 잉 일정 완료

--- a/잉/3월28일-4월03일.md
+++ b/잉/3월28일-4월03일.md
@@ -1,5 +1,5 @@
 ### 3월 28일 (월)
-- [ ] 운동 1시간.
-- [ ] 체스 pr날리기.
-- [ ] 글쓰기 pr날리기.
-- [ ] 저녁약속. 
+- [X] 운동 1시간.
+- [X] 체스 pr날리기.
+- [X] 글쓰기 pr날리기.
+- [X] 저녁약속. 
