--- a/아서/3월28일~4월3일.md
+++ b/아서/3월28일~4월3일.md
@@ -4,3 +4,14 @@
 - [x] 글쓰기 PR
 - [x] 위클리 회고
 - [x] 깃특강
+
+
+
+## 3월 29일
+
+- [ ] 글쓰기 리뷰하기
+- [ ] 10시 30분 수업
+- [ ] 피드백 오면 반영하기
+- [ ] 휴식
+- [ ] 산책
+
