[파랑] 3월29일 계획

--- a/파랑/3월28일~4월3일.md
+++ b/파랑/3월28일~4월3일.md
@@ -12,3 +12,7 @@
 우리 우짤코/스터디 크루들까지 안 친했으면 난 울었다^^ㅠ. 우리 스터디원분들 조.. 아니 건강하세요...
 그건 그렇고 이제 12시라서 내 격리도 해제됐다! 신난당 ｡:.ﾟヽ(´∀`｡)ﾉﾟ.:｡ ゜
 얼른 필라테스도 다시 다니구, 격리때문에 못 만난 체스 페어 매트랑 다른 크루들도 만나고 싶다🥹.
+
+### 3월 29일 (화)
+- [ ] 코딩을 지탱하는 기술 10장
+- [ ] 산책
