[아서] 3월 29일 일정완료

--- a/아서/3월28일~4월3일.md
+++ b/아서/3월28일~4월3일.md
@@ -9,9 +9,9 @@
 
 ## 3월 29일
 
-- [ ] 글쓰기 리뷰하기
-- [ ] 10시 30분 수업
-- [ ] 피드백 오면 반영하기
-- [ ] 휴식
-- [ ] 산책
+- [x] 글쓰기 리뷰하기
+- [x] 10시 30분 수업
+- [x] 피드백 오면 반영하기
+- [x] 휴식
+- [x] 산책
 
