[아서] 3월 29일 계획 (#179)
* [아서] 3월 29일 계획

* [아서] 3월 29일 일정완료

--- a/아서/3월28일~4월3일.md
+++ b/아서/3월28일~4월3일.md
@@ -4,3 +4,14 @@
 - [x] 글쓰기 PR
 - [x] 위클리 회고
 - [x] 깃특강
+
+
+
+## 3월 29일
+
+- [x] 글쓰기 리뷰하기
+- [x] 10시 30분 수업
+- [x] 피드백 오면 반영하기
+- [x] 휴식
+- [x] 산책
+
