[민초] 3월 29일 완료

--- a/민초/3월28일-4월1일.md
+++ b/민초/3월28일-4월1일.md
@@ -6,11 +6,11 @@
 
 # 3.29.
 
-- [ ] 10시 30분 수업
-- [ ] 자판기 미션
-- [ ] 풀업 100개
-- [ ] 아침 영양제 먹기
-- [ ] 점심 영양제 먹기
+- [x] 10시 30분 수업
+- [x] 자판기 미션
+- [x] 풀업 100개
+- [x] 아침 영양제 먹기
+- [x] 점심 영양제 먹기
 
 
 
