[파랑] 3월29일 계획 (#186)
* [파랑] 3월29일 계획

* [파랑] 3월29일 계획완료

--- a/파랑/3월28일~4월3일.md
+++ b/파랑/3월28일~4월3일.md
@@ -12,3 +12,11 @@
 우리 우짤코/스터디 크루들까지 안 친했으면 난 울었다^^ㅠ. 우리 스터디원분들 조.. 아니 건강하세요...
 그건 그렇고 이제 12시라서 내 격리도 해제됐다! 신난당 ｡:.ﾟヽ(´∀`｡)ﾉﾟ.:｡ ゜
 얼른 필라테스도 다시 다니구, 격리때문에 못 만난 체스 페어 매트랑 다른 크루들도 만나고 싶다🥹.
+
+### 3월 29일 (화)
+- [x] 코딩을 지탱하는 기술 10장
+- [x] 산책
+---
+3시쯤에 데일리조 사람들과 잠깐의 커피타임을 가졌다. 도란도란 얘기를 나누는 와중에 아키가 "파랑 글 되게 잘쓰시더라구요!"라고 채팅을 보냈다...
+이걸 본 다른 크루들이 우르르 내 글을 보러 갔다. 심지어 아스피는 내 글을 소리 내서 읽었다... 🫠 진짜 수치사할뻔. 그래도 이렇게 모여서 얘기하니까 좋았다!
+저녁엔 일주일 만에 밖에 나가서 산책을 했다. 오랜만에 바깥 공기를 쐐니까 기분이 좋았다. 여유로운 하루였다. 
