--- a/티거/3월28일-4월3일.md
+++ b/티거/3월28일-4월3일.md
@@ -5,3 +5,13 @@
 - [x] 산책
 - [x] 글쓰기 < 레벨 1 - 기록 >
 - [x] 우테코 3월 회식
+
+## 3월 29일 (화)
+
+- [x] 산책
+- [x] 테코톡 < 인증과 인가 >
+- [x] 10시 30분 강의 < 자판기 1단계 회고, 인증 & 인가 실습 >
+- [x] 인증 & 인가 미니 실습
+- [x] 글쓰기 리뷰
+  - [x] 민초
+  - [x] 매트
