--- a/앨버/3월28일-4월1일.md
+++ b/앨버/3월28일-4월1일.md
@@ -5,6 +5,6 @@
 
 ## 3월 29일
 
-- [ ] 타입스크립트 9단계까지
-- [ ] 유튜브 미션 회고
-- [ ] 1단계때 몰랐던 개념들 정리
+- [x] 타입스크립트 9단계까지
+- [x] 유튜브 미션 회고
+- [x] 1단계때 몰랐던 개념들 정리
