--- a/오리/3월28일~4월3일.md
+++ b/오리/3월28일~4월3일.md
@@ -4,7 +4,7 @@
 - [x] 슬랙봇 db연결 및 배포 준비
 
 ### 3월 29일(화)
-- [ ] 10시 30분 강의
-- [ ] 슬랙봇 스캐쥴링 기능 구현(안되면 내일까지.,.)
-- [ ] 글쓰기 리뷰달기
-- [ ] 체스 피드백 반영
+- [x] 10시 30분 강의
+- [x] 슬랙봇 스캐쥴링 기능 구현(안되면 내일까지.,.)
+- [x] 글쓰기 리뷰달기
+- [x] 체스 피드백 반영
