--- a/앨버/3월28일-4월1일.md
+++ b/앨버/3월28일-4월1일.md
@@ -8,3 +8,9 @@
 - [x] 타입스크립트 9단계까지
 - [x] 유튜브 미션 회고
 - [x] 1단계때 몰랐던 개념들 정리
+
+## 3월 30일
+
+- [ ] 자바스크립트 챕터 2개
+- [ ] 자판기 피드백 반영 및 2단계 시작
+- [ ] 코드리뷰 스터디 과제 1/2
