[아서] 3월 30일 계획완료

--- a/아서/3월28일~4월3일.md
+++ b/아서/3월28일~4월3일.md
@@ -19,8 +19,8 @@
 
 ## 3월 30일
 
-- [ ] 체스 피드백 반영하기
-- [ ] 자바의신 추상 클래스 & 예외처리 읽기
-- [ ] 저녁 약속
-- [ ] 산책
+- [x] 체스 피드백 반영하기
+- [x] 자바의신 추상 클래스 & 예외처리 읽기
+- [x] 저녁 약속
+- [x] 산책
 
