--- a/민초/3월28일-4월1일.md
+++ b/민초/3월28일-4월1일.md
@@ -14,9 +14,9 @@
 
 # 3.30.
 
-- [ ] 자판기 미션
-- [ ] 풀업 100개
-- [ ] 딥스 100개
-- [ ] 아침 영양제 먹기
-- [ ] 점심 영양제 먹기
+- [x] 자판기 미션
+- [x] 풀업 100개
+- [x] 딥스 100개
+- [x] 아침 영양제 먹기
+- [x] 점심 영양제 먹기
 
