[티거] 3월 30일 완료

--- a/티거/3월28일-4월3일.md
+++ b/티거/3월28일-4월3일.md
@@ -18,7 +18,7 @@
 
 ## 3월 30일 (수)
 
-- [ ] 14시 30분 안과
-- [ ] 자판기 1단계 리뷰 피드백
-- [ ] 글쓰기 리뷰
-  - [ ] 알파
+- [x] 14시 30분 안과
+- [x] 자판기 1단계 리뷰 피드백
+- [x] 글쓰기 리뷰
+  - [x] 알파
