--- a/잉/3월28일-4월03일.md
+++ b/잉/3월28일-4월03일.md
@@ -9,6 +9,6 @@
 - [x] 체스 피드백오면 일부 반영. 
 
 ### 3월 30일 (수)
-- [ ] 운동 1시간.
-- [ ] 체스 PR 날리기. 
-- [ ] 글쓰기 리뷰달기 (2명정도). 
+- [x] 운동 1시간.
+- [x] 체스 PR 날리기. 
+- [x] 글쓰기 리뷰달기 (2명정도). 
