220330 앨버 계획완료

--- a/앨버/3월28일-4월1일.md
+++ b/앨버/3월28일-4월1일.md
@@ -11,6 +11,6 @@
 
 ## 3월 30일
 
-- [ ] 자바스크립트 챕터 2개
-- [ ] 자판기 피드백 반영 및 2단계 시작
-- [ ] 코드리뷰 스터디 과제 1/2
+- [x] 자바스크립트 챕터 2개
+- [x] 자판기 피드백 반영 및 2단계 시작
+- [x] 코드리뷰 스터디 과제 1/2
