--- a/코린/3월28일-4월1일.md
+++ b/코린/3월28일-4월1일.md
@@ -12,6 +12,6 @@
 
 ## 3월30일
 
-- [ ] 모던 자바 p.87 ~ p.107 
-- [ ] 체스코드 뚫어져라 쳐다보기 
-- [ ] 체스 피드백 염탐
+- [x] 모던 자바 p.87 ~ p.107 
+- [x] 체스코드 뚫어져라 쳐다보기 
+- [x] 체스 피드백 염탐
