[코린] 3월30일 계획 (#193)
* feat: 코린 3월30일 계획

* feat: 코린 3월31일 계획 완료

--- a/코린/3월28일-4월1일.md
+++ b/코린/3월28일-4월1일.md
@@ -5,7 +5,13 @@
 - [x] 저녁 약속
 - [x] a
 
-## 3월28일
+## 3월29일
 
 - [x] 체스 피드백 반영하기
 - [x] 모던 자바 p.67 ~ p.86 
+
+## 3월30일
+
+- [x] 모던 자바 p.87 ~ p.107 
+- [x] 체스코드 뚫어져라 쳐다보기 
+- [x] 체스 피드백 염탐
