3월 30일 에덴 계획 완료

--- a/에덴/3월28일-4월2일.md
+++ b/에덴/3월28일-4월2일.md
@@ -10,5 +10,5 @@
 
 ## 3월 30일
 
-- [ ] 체스 구현 완성하면 PR 보내고 싶지만 너무 밤이 깊다 싶으면 그냥 자기
-- [ ] 이펙티브 자바 발표 자료 정리
+- [x] 체스 구현 완성하면 PR 보내고 싶지만 너무 밤이 깊다 싶으면 그냥 자기
+- [x] 이펙티브 자바 발표 자료 정리
