--- a/파랑/3월28일~4월3일.md
+++ b/파랑/3월28일~4월3일.md
@@ -20,3 +20,13 @@
 3시쯤에 데일리조 사람들과 잠깐의 커피타임을 가졌다. 도란도란 얘기를 나누는 와중에 아키가 "파랑 글 되게 잘쓰시더라구요!"라고 채팅을 보냈다...
 이걸 본 다른 크루들이 우르르 내 글을 보러 갔다. 심지어 아스피는 내 글을 소리 내서 읽었다... 🫠 진짜 수치사할뻔. 그래도 이렇게 모여서 얘기하니까 좋았다!
 저녁엔 일주일 만에 밖에 나가서 산책을 했다. 오랜만에 바깥 공기를 쐐니까 기분이 좋았다. 여유로운 하루였다. 
+
+### 3월 30일 (수)
+- [x] 코딩을 지탱하는 기술 11장
+- [x] 체스 1단계 리뷰 반영 시작
+- [x] 20시 필라테스
+---
+오랜만에 필라테스하고 기분 좋게 집에 가는 길에 친구 A를 만났다. 근데 갑자기 친구 B랑 한강 가는데 같이 가자고 하는 것이다. "엥? 지금?" 이러면서 어버버하는 사이에 친구 B가 와서 얼떨결에 한강을 가게 되었다. 약간 쌀쌀하긴 했지만 오랜만에 한강에 가니까 좋았다. 라면도 먹구.
+그리고 매번 한강 건널 때마다 떠오르는 추억이 있다. 처음 서울에 올라왔을 때 한강이 그렇게 큰 줄 모르고 마포대교를 걸어서 건넌 적이 있다.
+그냥 강 다리 건넌다고 가볍게 생각했는데 가도가도 다리가 끝이 없는 것이다. 마포대교 건너는 데만 30분이 걸린 걸 보고 한강이 진짜 큰 강이라는 걸 깨달았다... 파랑의 TMI..
+여튼 그러고 집 와서 또 체스 1단계 리팩토링하고ㅋㅋㅋ 결국 하루의 끝은 코딩인 걸로..
