3월 31일 에덴 계획

--- a/에덴/3월28일-4월2일.md
+++ b/에덴/3월28일-4월2일.md
@@ -12,3 +12,9 @@
 
 - [x] 체스 구현 완성하면 PR 보내고 싶지만 너무 밤이 깊다 싶으면 그냥 자기
 - [x] 이펙티브 자바 발표 자료 정리
+
+## 3월 31일
+
+- [ ] 이펙티브 자바 발표 준비 마무리
+- [ ] 체스 남은 부분 반영
+- [ ] 저녁 회식
