[파랑] 3월31일 계획

--- a/파랑/3월28일~4월3일.md
+++ b/파랑/3월28일~4월3일.md
@@ -30,3 +30,8 @@
 그리고 매번 한강 건널 때마다 떠오르는 추억이 있다. 처음 서울에 올라왔을 때 한강이 그렇게 큰 줄 모르고 마포대교를 걸어서 건넌 적이 있다.
 그냥 강 다리 건넌다고 가볍게 생각했는데 가도가도 다리가 끝이 없는 것이다. 마포대교 건너는 데만 30분이 걸린 걸 보고 한강이 진짜 큰 강이라는 걸 깨달았다... 파랑의 TMI..
 여튼 그러고 집 와서 또 체스 1단계 리팩토링하고ㅋㅋㅋ 결국 하루의 끝은 코딩인 걸로..
+
+### 3월 31일 (목)
+- [ ] 체스 1단계 리팩토링 후 PR 날리려고 노력하기(ㅎ..)
+- [ ] 코딩을 지탱하는 기술 12장
+- [ ] 글쓰기 2명 리뷰 달기
