feat: 코린 3월31일 계획 완료

--- a/코린/3월28일-4월1일.md
+++ b/코린/3월28일-4월1일.md
@@ -18,6 +18,6 @@
 
 ## 3월31일
 
-- [ ] 체스코드 뚫어져라 쳐다보고 고칠 것 있으면 고치기..
-- [ ] 체스 피드백 염탐
-- [ ] 회식
+- [x] 체스코드 뚫어져라 쳐다보고 고칠 것 있으면 고치기..
+- [x] 체스 피드백 염탐
+- [x] 회식
