[코린] 3월31일 계획 (#202)
* feat: 코린 3월31일 계획 추가

* feat: 코린 3월31일 계획 완료

--- a/코린/3월28일-4월1일.md
+++ b/코린/3월28일-4월1일.md
@@ -15,3 +15,9 @@
 - [x] 모던 자바 p.87 ~ p.107 
 - [x] 체스코드 뚫어져라 쳐다보기 
 - [x] 체스 피드백 염탐
+
+## 3월31일
+
+- [x] 체스코드 뚫어져라 쳐다보고 고칠 것 있으면 고치기..
+- [x] 체스 피드백 염탐
+- [x] 회식
