--- a/아서/3월28일~4월3일.md
+++ b/아서/3월28일~4월3일.md
@@ -28,8 +28,8 @@
 
 ## 3월 31일
 
-- [ ] 데일리 모각코
-- [ ] 데일리 회식
-- [ ] 체스 피드백 반영하기
-- [ ] instanceOf 사용에 대한 포스팅
+- [x] 데일리 모각코
+- [x] 데일리 회식
+- [x] 체스 피드백 반영하기
+- [x] instanceOf 사용에 대한 포스팅
 
