[오리] 3월 31일 계획 완료

--- a/오리/3월28일~4월3일.md
+++ b/오리/3월28일~4월3일.md
@@ -14,7 +14,7 @@
 - [x] 쉬는날
 
 ### 3월 31일(목)
-- [ ] 테코톡보기
-- [ ] 배포 문서보기
-- [ ] 체스 db 설계
-- [ ] 저녁약속
+- [x] 테코톡보기
+- [x] 배포 문서보기
+- [x] 체스 db 설계
+- [x] 저녁약속
