--- a/잉/3월28일-4월03일.md
+++ b/잉/3월28일-4월03일.md
@@ -14,7 +14,7 @@
 - [x] 글쓰기 리뷰달기 (2명정도).
 
 ### 3월 31일 (목)
-- [ ] 운동 1시간.
-- [ ] 글쓰기 리뷰달기 (2명). 
-- [ ] 체스 피드백오면 읽어는 보기.   
-- [ ] 저녁 약속
+- [x] 운동 1시간.
+- [x] 글쓰기 리뷰달기 (2명). 
+- [x] 체스 피드백오면 읽어는 보기.   
+- [x] 저녁 약속
