[잉] 3월 31일 계획 (#206)
* 220331 잉 일정

* 220331 잉 일정 완료

--- a/잉/3월28일-4월03일.md
+++ b/잉/3월28일-4월03일.md
@@ -11,4 +11,10 @@
 ### 3월 30일 (수)
 - [x] 운동 1시간.
 - [x] 체스 PR 날리기. 
-- [x] 글쓰기 리뷰달기 (2명정도). 
+- [x] 글쓰기 리뷰달기 (2명정도).
+
+### 3월 31일 (목)
+- [x] 운동 1시간.
+- [x] 글쓰기 리뷰달기 (2명). 
+- [x] 체스 피드백오면 읽어는 보기.   
+- [x] 저녁 약속
