220331 앨버 계획완료

--- a/앨버/3월28일-4월1일.md
+++ b/앨버/3월28일-4월1일.md
@@ -17,7 +17,7 @@
 
 ## 3월 31일
 
-- [ ] 자판기 2단계
-- [ ] 자바스크립트 챕터 1개
-- [ ] 코드리뷰 스터디 과제 마무리
-- [ ] 코드리뷰 스터디
+- [x] 자판기 2단계
+- [x] 자바스크립트 챕터 1개
+- [x] 코드리뷰 스터디 과제 마무리
+- [x] 코드리뷰 스터디
