[앨버] 3월 31일 계획 (#201)
* 220331 앨버 계획

* 220331 앨버 계획완료

--- a/앨버/3월28일-4월1일.md
+++ b/앨버/3월28일-4월1일.md
@@ -14,3 +14,10 @@
 - [x] 자바스크립트 챕터 2개
 - [x] 자판기 피드백 반영 및 2단계 시작
 - [x] 코드리뷰 스터디 과제 1/2
+
+## 3월 31일
+
+- [x] 자판기 2단계
+- [x] 자바스크립트 챕터 1개
+- [x] 코드리뷰 스터디 과제 마무리
+- [x] 코드리뷰 스터디
