feat: 코린 4월1일 계획 완료

--- a/코린/3월28일-4월1일.md
+++ b/코린/3월28일-4월1일.md
@@ -24,7 +24,7 @@
 
 ## 4월1일
 
-- [ ] 체스 1단계 피드백 반영
-- [ ] 체스 UI 설계
-- [ ] spark 공부
-- [ ] 주간회고작성
+- [x] 체스 1단계 피드백 반영
+- [x] 체스 UI 설계
+- [x] spark 공부
+- [x] 주간회고작성
