[파랑] 4월1일 계획완료

--- a/파랑/3월28일~4월3일.md
+++ b/파랑/3월28일~4월3일.md
@@ -37,4 +37,10 @@
 - [ ] 글쓰기 2명 리뷰 달기
 
 ### 4월 1일 (금)
-- [ ] 체스 1단계 PR
+- [x] 체스 1단계 PR
+---
+데일리에서 90초 릴레이 소설 쓰기를 했다. 글 쓸 때는 큰 기대 안 했는데, 낭독회가 세상 웃겼다ㅋㅋㅋㅋㅋㅋㅋ.
+우테코 하면서 제일 진심으로 웃었던 것 같다. 아니 사실 너무 웃겨서 울었다. 글 하나하나가 전부 킬포 천지였다.
+특히 왼발이 호날두고 오른발이 메시인 아스피 이야기가 너무 웃겼다. 호날두 사태가 터졌는데 왜 메시인 오른발을 절단하냐고ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅠㅠㅠㅠㅠ.
+제로가 어머님이 누구니? 부른 거랑 10초마다 `오라이스구락피오옭!!!`을 소리내지 않으면 죽는 마법에 걸린 오리 이야기도 너무 재밌었다.
+만우절이라고 다들 닉네임 바꾼 것도 재밌구ㅎㅎ. 아침에 피곤해서 최악의 하루라고 생각했는데 크루들 덕분에 제일 많이 웃은 날이 됐다😆.
