--- a/티거/3월28일-4월3일.md
+++ b/티거/3월28일-4월3일.md
@@ -28,3 +28,13 @@
 - [x] 자판기 1단계 리뷰 피드백
 - [x] 글쓰기 리뷰
   - [x] 코카콜라
+
+## 4월 1일 (금)
+
+- [x] 산책
+- [x] 10시 30분 강의 < 자판기 미션 피드백 >
+- [x] 자판기 2단계 시작
+  - [x] 구현할 기능 목록 정리
+  - [x] 설계
+- [x] 글쓰기 리뷰
+  - [x] 필즈
