--- a/아서/4월4일~4월10일.md
+++ b/아서/4월4일~4월10일.md
@@ -1,6 +1,6 @@
 ## 4월 4일
 
-- [ ] 주간 회고 작성
-- [ ] 글쓰기 최종 작성
-- [ ] 체스 4단계 고민하고 도전해보기
-- [ ] 산책
+- [x] 주간 회고 작성
+- [x] 글쓰기 최종 작성
+- [x] 체스 4단계 고민하고 도전해보기
+- [x] 산책
