[파랑] 4월4일 계획완료

--- a/파랑/4월4일~4월10일.md
+++ b/파랑/4월4일~4월10일.md
@@ -1,4 +1,10 @@
 ### 4월 4일 (월)
-- [ ] 체스 4단계
-- [ ] 글쓰기 마무리
-- [ ] 학습로그 작성
+- [x] 체스 4단계
+- [x] 글쓰기 마무리
+- [x] 학습로그 작성
+---
+와 드디어..! 우리 데일리도 오프라인 모임을 하게 되었다ㅠㅠㅠㅠㅠ 감격.
+최초로 데일리 미팅 시간이 아닌데도 크루들 전체가 모여서 이야기를 나눴다. 사람도 많고 이것저것 정할 게 많아서 얘기하는 와중에도 계속 엎어질까봐 조마조마했다.
+날짜부터 시작해서 코로나 감염자/비감염자 나눠서 모여야 하냐, 파티룸을 잡아야 하냐, 구구없는 구구조 모임으로 가야 하냐, 사당에서 모일까 서입에서 모일까 토론이 아주 치열했다.
+결론적으로 이번주 목요일에 있던 온라인 회식을 대신해서 오프라인으로 모이게 되었다. 다행히 안 되는 사람도 없어서 다 같이 만날 수 있다. 너무 신난당ㅎㅎㅎ.
+근데 체스 미션은 안 신난다^^. 놀랍게도 아직 코드를 한 줄도 못 썼다. 나 끝낼 수 있겠지?....
