[파랑] 4월5일 계획완료

--- a/파랑/4월4일~4월10일.md
+++ b/파랑/4월4일~4월10일.md
@@ -10,5 +10,5 @@
 근데 체스 미션은 안 신난다^^. 놀랍게도 아직 코드를 한 줄도 못 썼다. 나 끝낼 수 있겠지?....
 
 ### 4월 5일 (화)
-- [ ] 체스 4단계 제발 끝낼 수 있게 노력하기
-- [ ] 하지만 이 와중에 저녁약속 (...)
+- [x] 체스 4단계 제발 끝낼 수 있게 노력하기
+- [x] 하지만 이 와중에 저녁약속 (...)
