[파랑] 4월5일 계획 (#233)
* [파랑] 4월5일 계획

* [파랑] 4월5일 계획완료

--- a/파랑/4월4일~4월10일.md
+++ b/파랑/4월4일~4월10일.md
@@ -8,3 +8,7 @@
 날짜부터 시작해서 코로나 감염자/비감염자 나눠서 모여야 하냐, 파티룸을 잡아야 하냐, 구구없는 구구조 모임으로 가야 하냐, 사당에서 모일까 서입에서 모일까 토론이 아주 치열했다.
 결론적으로 이번주 목요일에 있던 온라인 회식을 대신해서 오프라인으로 모이게 되었다. 다행히 안 되는 사람도 없어서 다 같이 만날 수 있다. 너무 신난당ㅎㅎㅎ.
 근데 체스 미션은 안 신난다^^. 놀랍게도 아직 코드를 한 줄도 못 썼다. 나 끝낼 수 있겠지?....
+
+### 4월 5일 (화)
+- [x] 체스 4단계 제발 끝낼 수 있게 노력하기
+- [x] 하지만 이 와중에 저녁약속 (...)
