--- a/티거/4월4일-4월8일.md
+++ b/티거/4월4일-4월8일.md
@@ -7,5 +7,5 @@
 
 ## 4월 5일 (화)
 
-- [ ] 10시 30분 강의 < 자판기 미션 최종 피드백 >
-- [ ] 자판기 2단계 민초보다 열심히 🏃🏻‍♀️
+- [x] 10시 30분 강의 < 자판기 미션 최종 피드백 >
+- [x] 자판기 2단계 민초보다 열심히 🏃🏻‍♀️
