220406 잉 일정 완료

--- a/잉/4월03일-4월08일.md
+++ b/잉/4월03일-4월08일.md
@@ -4,6 +4,6 @@
 - [x] 운동 1시간 
 
 ### 4월 05일 (화)
-- [ ] 체스 4단계 리펙토링 보완
-- [ ] 체스 5단계 시작 및 일부 구현 
-- [ ] 운동 1시간 
+- [x] 체스 4단계 리펙토링 보완
+- [x] 체스 5단계 시작 및 일부 구현 
+- [x] 운동 1시간 
