--- a/파랑/4월4일~4월10일.md
+++ b/파랑/4월4일~4월10일.md
@@ -17,5 +17,7 @@
 - [x] 체스 제발......
 
 ### 4월 7일 (목)
-- [ ] 체....스.......PR...
-- [ ] 데일리 회식
+- [x] 체....스.......PR...
+- [x] 데일리 회식
+---
+오우 오늘 잉, 코린, 에덴도 보구 오리도 술 많이 마시고 쉽지 않네요... 지금은 저희 집에서 3차 중이랍니다ㅎㅎㅎㅎ 저희는 담주에 같이 봐요 안녕~~👋
