[파랑] 4월7일 계획 (#251)
* [파랑] 4월7일 계획

* [파랑] 4월7일 계획완료

--- a/파랑/4월4일~4월10일.md
+++ b/파랑/4월4일~4월10일.md
@@ -15,3 +15,9 @@
 
 ### 4월 6일 (수)
 - [x] 체스 제발......
+
+### 4월 7일 (목)
+- [x] 체....스.......PR...
+- [x] 데일리 회식
+---
+오우 오늘 잉, 코린, 에덴도 보구 오리도 술 많이 마시고 쉽지 않네요... 지금은 저희 집에서 3차 중이랍니다ㅎㅎㅎㅎ 저희는 담주에 같이 봐요 안녕~~👋
