--- a/파랑/4월4일~4월10일.md
+++ b/파랑/4월4일~4월10일.md
@@ -21,3 +21,7 @@
 - [x] 데일리 회식
 ---
 오우 오늘 잉, 코린, 에덴도 보구 오리도 술 많이 마시고 쉽지 않네요... 지금은 저희 집에서 3차 중이랍니다ㅎㅎㅎㅎ 저희는 담주에 같이 봐요 안녕~~👋
+
+### 4월 8일 (금)
+- [ ] 방학식
+- [ ] 18시 필라테스
