[티거] 4월 8일 계획

--- a/티거/4월4일-4월8일.md
+++ b/티거/4월4일-4월8일.md
@@ -14,7 +14,13 @@
 
 - [x] 자판기 2단계 누구보다 열심히 🏃🏻‍♀️ 🏃🏻‍♀️
 
-## 4월 7일 (수)
+## 4월 7일 (목)
 
 - [x] 자판기 2단계 마저 달리기
 - [x] 공원조랑 뒤집어지게 놀기
+
+## 4월 8일 (금)
+
+- [ ] 레벨 1 방학식
+- [ ] 산책
+- [ ] 스스로 고생했다고 토닥토닥
