[파랑] 4월8일 계획완료

--- a/파랑/4월4일~4월10일.md
+++ b/파랑/4월4일~4월10일.md
@@ -23,5 +23,9 @@
 오우 오늘 잉, 코린, 에덴도 보구 오리도 술 많이 마시고 쉽지 않네요... 지금은 저희 집에서 3차 중이랍니다ㅎㅎㅎㅎ 저희는 담주에 같이 봐요 안녕~~👋
 
 ### 4월 8일 (금)
-- [ ] 방학식
-- [ ] 18시 필라테스
+- [x] 방학식
+- [x] 18시 필라테스
+---
+방학식을 하는데 다시 학창시절로 돌아간 느낌이 들었다. 딱 한 학년이 끝났을 때 느꼈던 감정들이 그대로 느껴졌다. 
+다음 레벨은 또 어떨지 기대되기도 하고, 이제 겨우 친해진 데일리 크루들이랑 헤어지는 게 아쉬우면서도 방학이 와서 신나는 딱 이 느낌! 학교를 10개월로 압축해서 다니는 기분이다.
+방학에도 할 일이 많아서 편히 쉴 수 있을지 걱정도 된다. 진짜 후회 없게 알차게 보내야지!! 
