--- a/코린/4월25일-4월29일.md
+++ b/코린/4월25일-4월29일.md
@@ -1,5 +1,5 @@
 ## 4월25일
 
-- [ ] 체스 1단계 피드백 반영
-- [ ] 알고리즘 스터디 참석
-- [ ] http 스터디 계획 세우기
+- [x] 체스 1단계 피드백 반영
+- [x] 알고리즘 스터디 참석
+- [x] http 스터디 계획 세우기
