--- a/티거/4월25일-5월1일.md
+++ b/티거/4월25일-5월1일.md
@@ -3,6 +3,7 @@
 ## 4월 25일 (월)
 
 - [x] 2단계 PR
-- [ ] LMS < 계산기 - React 톺아보기 > 자료 정리
-- [ ] 리액트 공식 문서 읽기
-- [ ] 레벨 1 회고록 작성
+- [x] 자판기 회고
+- [x] LMS < 계산기 - React 톺아보기 > 자료 정리
+- [x] 리액트 공식 문서 읽기
+- [x] 레벨 1 회고록 작성
