--- a/티거/4월25일-5월1일.md
+++ b/티거/4월25일-5월1일.md
@@ -7,3 +7,8 @@
 - [x] LMS < 계산기 - React 톺아보기 > 자료 정리
 - [x] 리액트 공식 문서 읽기
 - [x] 레벨 1 회고록 작성
+
+## 4월 26일 (화)
+
+- [ ] LMS < 페이먼츠 - Component-Driven Development > 자료 읽기
+- [ ] 페이먼츠 1단계
