--- a/오리/4월25일~5월3일.md
+++ b/오리/4월25일~5월3일.md
@@ -1,6 +1,6 @@
 ### 4월 25일(월)
-- [ ] 2단계 프론트 체스 이동 기능 수정
-- [ ] 2단계 api구현
-- [ ] 책, 강의 일주일 분량 체크
-- [ ] 알고리즘 2문제
-- [ ] 저녁약속
+- [x] 2단계 프론트 체스 이동 기능 수정
+- [x] 2단계 api구현
+- [x] 책, 강의 일주일 분량 체크
+- [x] 알고리즘 2문제
+- [x] 저녁약속
