[티거] 4월 26일 완료

--- a/티거/4월25일-5월1일.md
+++ b/티거/4월25일-5월1일.md
@@ -10,5 +10,5 @@
 
 ## 4월 26일 (화)
 
-- [ ] LMS < 페이먼츠 - Component-Driven Development > 자료 읽기
-- [ ] 페이먼츠 1단계
+- [x] LMS < 페이먼츠 - Component-Driven Development > 자료 읽기
+- [x] 페이먼츠 1단계
