--- a/오리/4월25일~5월3일.md
+++ b/오리/4월25일~5월3일.md
@@ -6,6 +6,6 @@
 - [x] 저녁약속
 
 ### 4월 26일(화)
-- [ ] 오전 spring 코어 강의
-- [ ] 알고리즘 2문제
-- [ ] 2단계 프론트 수정
+- [x] 오전 spring 코어 강의
+- [x] 알고리즘 2문제
+- [x] 2단계 프론트 수정
