220426 잉 일정 완료

--- a/잉/4월25일-4월29일.md
+++ b/잉/4월25일-4월29일.md
@@ -4,7 +4,7 @@
 - [x] 운동 1시간 
 
 ### 4월 26일 (화)
-- [ ] 웹 체스 2단계 일부 진행 
-- [ ] 사용한 spring annotation 정리
-- [ ] 운동 1시간 
+- [x] 웹 체스 2단계 일부 진행 
+- [x] 사용한 spring annotation 정리
+- [x] 운동 1시간 
 
