--- a/아서/4월 25일~5월1일.md
+++ b/아서/4월 25일~5월1일.md
@@ -14,6 +14,6 @@
 
 ## 4월 27일
 
-- [ ] 웹 체스 미션 2단계 시작하기
-- [ ] 스프링 MVC 강의 한 섹션 듣기
-- [ ] Dao 와 Repository, 계층형 아키텍쳐 공부하기
+- [x] 웹 체스 미션 2단계 시작하기
+- [x] 스프링 MVC 강의 한 섹션 듣기
+- [x] Dao 와 Repository, 계층형 아키텍쳐 공부하기
