220427 잉 일정 완료

--- a/잉/4월25일-4월29일.md
+++ b/잉/4월25일-4월29일.md
@@ -9,6 +9,6 @@
 - [x] 운동 1시간 
 
 ### 4월 27일 (수)
-- [ ] 웹 체스 2단계 + 일부 진행
-- [ ] 네트워크책 1장 보기 
-- [ ] 운동 1시간 
+- [x] 웹 체스 2단계 + 일부 진행
+- [x] 네트워크책 1장 보기 
+- [x] 운동 1시간 
