4월 27일 에덴 계획 완료

--- a/에덴/발표자료/4월25일-4월29일.md
+++ b/에덴/발표자료/4월25일-4월29일.md
@@ -10,7 +10,7 @@
 
 ## 4월 27일
 
-- [ ] 2단계 PR 날리기
-- [ ] http 책 읽기
-- [ ] 알고리즘 문제 풀기
-- [ ] 운동가기
+- [x] 2단계 PR 날리기
+- [x] http 책 읽기
+- [x] 알고리즘 문제 풀기
+- [x] 운동가기
