--- a/오리/4월25일~5월3일.md
+++ b/오리/4월25일~5월3일.md
@@ -13,3 +13,9 @@
 ### 4월 27일(수)
 - [x] 알고리즘 2문제
 - [x] 2단계 pr
+
+### 4월 28일(목)
+- [ ] 알고리즘 2문제
+- [ ] 인수테스트 영상 녹화
+- [ ] 우테뷰 질문지 피드백
+- [ ] 스프링 핵심 원리 ~섹션2
