[파랑] 4월28일 계획 (#289)
* [파랑] 4월28일 계획

* [파랑] 4월28일 계획 완료

--- a/파랑/4월25일~5월1일.md
+++ b/파랑/4월25일~5월1일.md
@@ -10,3 +10,13 @@
 ### 4월 27일 (수)
 - [x] 지원 플랫폼 온보딩
 - [x] 체스 2단계 최대한 많이
+
+### 4월 28일 (목)
+- [x] 체스 2단계 PR!!
+- [x] 21시 필라테스
+---
+오프 시작하고 정신이 하나도 없어서 일기도 못 썼네..
+오프 첫 날에 시작한 페어를 오늘 끝냈다! 운이 좋게도 Lv2 첫 페어가 잉이어서 처음부터 어색함 없이 시작할 수 있었다.
+사실 보이라 첫 오프에서부터 알았지만 이번 페어하면서 잉이 진짜 재밌는 사람이라는 걸 다시 한 번 깨달았다.
+진짜ㅋㅋㅋㅋㅠ 페어하면서, 아니 우테코 하면서 젤 많이 웃은 것 같다. 잉 왤케 웃기죠.. 이런 얘기 공개적으로 쓰면 잉이 싫어하겠지만 사실인 걸..
+이제 잉이랑 페어로 만날 일은 없어서 섭섭하지만, `X같은` 체스를 곧 놓을 수 있다는 생각에 후련하다~ 잉 수고했슴니다~
