220428 잉 일정 완료

--- a/잉/4월25일-4월29일.md
+++ b/잉/4월25일-4월29일.md
@@ -14,6 +14,6 @@
 - [x] 운동 1시간 
 
 ### 4월 28일 (목)
-- [ ] 웹 체스 2단계 PR
-- [ ] 네트워크책 2장까지 보기
-- [ ] 운동 1시간 
+- [x] 웹 체스 2단계 PR
+- [x] 네트워크책 2장까지 보기
+- [x] 운동 1시간 
