[잉] 4월 28일 계획 (#292)
* 220428 잉 일정

* 220428 잉 일정 완료

--- a/잉/4월25일-4월29일.md
+++ b/잉/4월25일-4월29일.md
@@ -12,3 +12,8 @@
 - [x] 웹 체스 2단계 + 일부 진행
 - [x] 네트워크책 1장 보기 
 - [x] 운동 1시간 
+
+### 4월 28일 (목)
+- [x] 웹 체스 2단계 PR
+- [x] 네트워크책 2장까지 보기
+- [x] 운동 1시간 
