[파랑] 4월29일 계획

--- a/파랑/4월25일~5월1일.md
+++ b/파랑/4월25일~5월1일.md
@@ -20,3 +20,8 @@
 사실 보이라 첫 오프에서부터 알았지만 이번 페어하면서 잉이 진짜 재밌는 사람이라는 걸 다시 한 번 깨달았다.
 진짜ㅋㅋㅋㅋㅠ 페어하면서, 아니 우테코 하면서 젤 많이 웃은 것 같다. 잉 왤케 웃기죠.. 이런 얘기 공개적으로 쓰면 잉이 싫어하겠지만 사실인 걸..
 이제 잉이랑 페어로 만날 일은 없어서 섭섭하지만, `X같은` 체스를 곧 놓을 수 있다는 생각에 후련하다~ 잉 수고했슴니다~
+
+### 4월 29일 (금)
+- [ ] 미션 피드백 강의
+- [ ] 코틀린으로 자동차 경주 구현 페어
+- [ ] 저녁 약속
