--- a/아서/4월 25일~5월1일.md
+++ b/아서/4월 25일~5월1일.md
@@ -29,6 +29,6 @@
 
 ## 4월 29일
 
-- [ ] 웹 체스 미션 코드 개선하기
-- [ ] 스프링 MVC 스터디
-- [ ] 스프링 MVC 강의 듣기
+- [x] 웹 체스 미션 코드 개선하기
+- [x] 스프링 MVC 스터디
+- [x] 스프링 MVC 강의 듣기
