--- a/아서/4월 25일~5월1일.md
+++ b/아서/4월 25일~5월1일.md
@@ -24,3 +24,11 @@
 
 - [x] 웹 체스 미션 방삭제하는 기능 구현
 - [x] 스프링 MVC 강의 한 섹션 듣기
+
+
+
+## 4월 29일
+
+- [x] 웹 체스 미션 코드 개선하기
+- [x] 스프링 MVC 스터디
+- [x] 스프링 MVC 강의 듣기
