--- a/오리/4월25일~5월3일.md
+++ b/오리/4월25일~5월3일.md
@@ -21,7 +21,7 @@
 - [x] 스프링 핵심 원리 ~섹션2
 
 ### 4월 29일(금)
-- [ ] 알고리즘 2문제
-- [ ] 오전 강의
-- [ ] 토수타
-- [ ] 스프링 핵심 원리 ~섹션4
+- [x] 알고리즘 2문제
+- [x] 오전 강의
+- [x] 토수타
+- [x] 스프링 핵심 원리 ~섹션4
