[티거] 4월 29일 완료

--- a/티거/4월25일-5월1일.md
+++ b/티거/4월25일-5월1일.md
@@ -23,7 +23,7 @@
 
 ## 4월 29일 (금)
 
-- [ ] 페이먼츠 1단계 정리
-- [ ] 페어 프로그래밍 회고 🦖
-- [ ] 레벨 1 회고록 마무리
-- [ ] 리액트 제어 컴포넌트 및 비제어 컴포넌트 학습
+- [x] 페이먼츠 1단계 정리
+- [x] 페어 프로그래밍 회고 🦖
+- [x] 레벨 1 회고록 마무리
+- [x] 리액트 제어 컴포넌트 및 비제어 컴포넌트 학습
