[티거] 4월 29일 계획 (#304)
오프라인 등교를 할까 말까 엄청 고민하다가 일단 갔다
미션 PR 제출 후이기도 하고 온라인 병행 마지막 날이기도 하고 코로나 이슈도 있어서 그런지 캠퍼스가 텅텅이었다
집에 있으면 잠만 잘 것 같아서 나간 건데 거의 하루 종일 쉰 것 같다
이럴 거면 집에서 잠을.... ㅋㅋㅋㅋㅋㅋㅋㅋ ㅠ

새로운 조합으로 코이라멘을 먹으러 갔다
꼬재랑 같은 테이블에서 먹으면서 이런저런 얘기를 했다
얼른 준조랑도 친해지고 싶다

블링 민초랑 냉삼에 간단하게 소주 곁들이고~
블링이 코노 가고 싶다고 해서 같이 갔다
너무 오랜만이었다
맞다 그리고 잠실은 2곡에 무려 1000원...!

오랜만에 선선해서 기분이 좋았다
근데 잠이 너무 와...

--- a/티거/4월25일-5월1일.md
+++ b/티거/4월25일-5월1일.md
@@ -20,3 +20,10 @@
 ## 4월 28일 (목)
 
 - [x] 페이먼츠 1단계 PR
+
+## 4월 29일 (금)
+
+- [x] 페이먼츠 1단계 정리
+- [x] 페어 프로그래밍 회고 🦖
+- [x] 레벨 1 회고록 마무리
+- [x] 리액트 제어 컴포넌트 및 비제어 컴포넌트 학습
