--- a/오리/4월25일~5월3일.md
+++ b/오리/4월25일~5월3일.md
@@ -19,3 +19,9 @@
 - [x] 인수테스트 영상 녹화
 - [x] 우테뷰 질문지 피드백
 - [x] 스프링 핵심 원리 ~섹션2
+
+### 4월 29일(금)
+- [x] 알고리즘 2문제
+- [x] 오전 강의
+- [x] 토수타
+- [x] 스프링 핵심 원리 ~섹션4
