[파랑] 4월29일 계획완료

--- a/파랑/4월25일~5월1일.md
+++ b/파랑/4월25일~5월1일.md
@@ -22,6 +22,6 @@
 이제 잉이랑 페어로 만날 일은 없어서 섭섭하지만, `X같은` 체스를 곧 놓을 수 있다는 생각에 후련하다~ 잉 수고했슴니다~
 
 ### 4월 29일 (금)
-- [ ] 미션 피드백 강의
-- [ ] 코틀린으로 자동차 경주 구현 페어
-- [ ] 저녁 약속
+- [x] 미션 피드백 강의
+- [x] 코틀린으로 자동차 경주 구현 페어
+- [x] 저녁 약속
