--- a/오리/5월2일~5월8일.md
+++ b/오리/5월2일~5월8일.md
@@ -1,27 +1,4 @@
-### 4월 25일(월)
-- [x] 2단계 프론트 체스 이동 기능 수정
-- [x] 2단계 api구현
-- [x] 책, 강의 일주일 분량 체크
-- [x] 알고리즘 2문제
-- [x] 저녁약속
-
-### 4월 26일(화)
-- [x] 오전 spring 코어 강의
-- [x] 알고리즘 2문제
-- [x] 2단계 프론트 수정
-
-### 4월 27일(수)
-- [x] 알고리즘 2문제
-- [x] 2단계 pr
-
-### 4월 28일(목)
-- [x] 알고리즘 2문제
-- [x] 인수테스트 영상 녹화
-- [x] 우테뷰 질문지 피드백
-- [x] 스프링 핵심 원리 ~섹션2
-
-### 4월 29일(금)
-- [x] 알고리즘 2문제
-- [x] 오전 강의
-- [x] 토수타
-- [x] 스프링 핵심 원리 ~섹션4
+### 5월 2일(월)
+- [ ] 잠실에서 놀기
+- [ ] 영상근로 회의
+- [ ] ~ 섹션5
